--- a/src/main/resources/password/pwm/i18n/Display_ca.properties
+++ b/src/main/resources/password/pwm/i18n/Display_ca.properties
@@ -1,4 +1,3 @@
-#Tue, 20 Jun 2017 12:52:39 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -78,11 +77,12 @@ Display_ChangePasswordForm=Introdueixi les dades seg\u00fcents. Aquest pas \u00e
 Display_CheckingData=S'estan comprovant les dades...
 Display_CheckingPassword=S'est\u00e0 comprovant la contrasenya...
 Display_CheckingResponses=S'estan comprovant les respostes...
+Display_ClientDisconnect=No s'ha pogut connectar amb el servidor.
 Display_CommunicationError=No s'ha pogut comunicar amb el servidor. Continu\u00ef quan estigui preparat.
 Display_ConfirmResponses=Asseguri's que les preguntes i les respostes s\u00f3n correctes. Comprovi l'ortografia i la puntuaci\u00f3. Si no recorda la contrasenya, podr\u00e0 accedir al compte proporcionant les respostes a aquestes preguntes de seguretat.
 Display_Day=dia
 Display_Days=dies
-Display_DeleteUserConfirm=Confirmeu que voleu suprimir el compte? Aquesta acci\u00f3 no es pot desfer.
+Display_DeleteUserConfirm=Confirma que vol suprimir el compte? Aquesta acci\u00f3 no es pot desfer.
 Display_ErrorBody=Hi ha hagut un error. Tanqui el navegador i torni a provar-ho m\u00e9s tard. Si l'error continua, contacti amb el servei d'assist\u00e8ncia.
 Display_ErrorReference=refer\u00e8ncia de l'error %1%
 Display_ExpirationDate=Data de caducitat del compte (m\u00e0xim %1% dies)
@@ -92,11 +92,11 @@ Display_ForgottenUsername=Introdu\u00efu la informaci\u00f3 seg\u00fcent. S'util
 Display_GuestRegistration=Per registrar un compte de convidat nou, introdueixi la informaci\u00f3 seg\u00fcent.
 Display_GuestUpdate=Per actualitzar un compte de convidat, comprovi i modifiqui la informaci\u00f3 seg\u00fcent.
 Display_Helpdesk=Introdueixi dades de cerca de l'usuari.
-Display_HelpdeskOtpValidation=Indiqueu a l'usuari que carregui l'aplicaci\u00f3 d'autenticaci\u00f3 m\u00f2bil i comparteixi el codi de contrasenya actual.
+Display_HelpdeskOtpValidation=Indiqui a l'usuari que carregui l'aplicaci\u00f3 d'autenticaci\u00f3 m\u00f2bil i comparteixi el codi de contrasenya actual.
 Display_Hour=hora
 Display_Hours=hores
-Display_IdleTimeout=Temps l\u00edmit d'inactivitat\:
-Display_IdleWarningMessage=El temps l\u00edmit de la sessi\u00f3 del navegador est\u00e0 a punt complir-se. Cliqueu en qualsevol lloc de la p\u00e0gina per reprendre la sessi\u00f3.
+Display_IdleTimeout=Temps d'espera d'inactivitat\:
+Display_IdleWarningMessage=El temps l\u00edmit de la sessi\u00f3 del navegador est\u00e0 a punt complir-se. Faci clic en qualsevol lloc de la p\u00e0gina per reprendre la sessi\u00f3.
 Display_IdleWarningTitle=Temps l\u00edmit d'inactivitat
 Display_JavascriptRequired=Es necessita JavaScript per visualitzar aquesta p\u00e0gina.
 Display_LeaveDirtyPasswordPage=Si surt d'aquesta p\u00e0gina, no es canviar\u00e0 la contrasenya.
@@ -132,7 +132,7 @@ Display_PleaseWait=S'est\u00e0 carregant...
 Display_PleaseWaitNewUser=S'est\u00e0 configurant el compte nou. Aquest proc\u00e9s pot durar uns quants minuts, tingui paci\u00e8ncia.
 Display_PleaseWaitPassword=S'est\u00e0 canviant la contrasenya. Aquest proc\u00e9s pot durar uns quants minuts, tingui paci\u00e8ncia.
 Display_Random=Aleatori
-Display_RecoverVerificationChoice=Seleccioneu un dels m\u00e8todes que hi ha a continuaci\u00f3 per verificar la vostra identitat. Nota\: si l'administrador us sol\u00b7licita diverses maneres de verificaci\u00f3, se us redirigir\u00e0 a aquesta p\u00e0gina de nou fins que compliu tots els criteris de verificaci\u00f3.
+Display_RecoverVerificationChoice=Seleccioneu un dels m\u00e8todes seg\u00fcents per verificar la vostra identitat. Tingueu en compte que, si l'administrador exigeix diversos m\u00e8todes de verificaci\u00f3, tornareu a aquesta p\u00e0gina fins que compliu tots els criteris de comprovaci\u00f3.
 Display_RecoverTokenSendChoices=Per verificar la seva identitat, se li enviar\u00e0 un codi de seguretat. Tri\u00ef el m\u00e8tode pel qual prefereix rebre'l.
 Display_RecoverTokenSendChoiceEmail=Enviar el codi al seu correu electr\u00f2nic registrat.
 Display_RecoverTokenSendChoiceSMS=Enviar el codi al seu tel\u00e8fon m\u00f2bil amb un missatge de text (SMS).
@@ -150,9 +150,9 @@ Display_ResponsesPrompt=Introdueixi les respostes de seguretat
 Display_SelectionIndicator=Seleccioni una pregunta de la llista
 Display_SearchCompleted=Cerca finalitzada.
 Display_SearchResultsInfo=S'han retornat %1% resultats en %2%.
-Display_SearchResultsExceeded=Els resultats de la cerca han superat la mida de cerca m\u00e0xima.
+Display_SearchResultsExceeded=Els resultats de la cerca han superat la mida de cerca m\u00e0xima
 Display_SetRandomPasswordPrompt=Vol establir una contrasenya aleat\u00f2ria nova per a aquest usuari?
-Display_SearchResultsNone=Cap resultat.
+Display_SearchResultsNone=No hi ha cap resultat
 Display_Second=segon
 Display_Seconds=segons
 Display_SetupHelpdeskResponses=<p>L'administrador necessita que proporcioneu les seg\u00fcents respostes. Aquestes respostes s'utilitzen per verificar la vostra identitat en cas que contacteu amb el servei d'assist\u00e8ncia.</p>
@@ -161,16 +161,18 @@ Display_SetupRequiredResponses=
 Display_SetupResponses=<p>Si oblida la contrasenya, pot accedir al seu compte responent les preguntes de seguretat.</p><p>Tri\u00ef les preguntes i les respostes que cal utilitzar per verificar la seva identitat en cas que oblidi la contrasenya. Com que les respostes a aquestes preguntes es poden utilitzar per accedir al seu compte, asseguri's que d\u00f3na respostes que no s\u00f3n f\u00e0cils d'endevinar ni de descobrir. </p>
 Display_SetupOtpSecret=Si oblida la contrasenya, pot accedir al compte utilitzant el seu dispositiu m\u00f2bil. Segueixi les instruccions seg\u00fcents en funci\u00f3 del tipus de dispositiu.
 Display_SetupOtp_Android_Title=Android
-Display_SetupOtp_Android_Steps=<b>Instal\u00b7li l'aplicaci\u00f3 Google Authenticator per a Android.</b><ol><li>Al tel\u00e8fon, vagi al Google Play Store.</li><li>Cerqui <b>Google Authenticator</b>.<br/>(<a target\="playstore" href\="https\://play.google.com/store/apps/details?id\=com.google.android.apps.authenticator2">Baixi'l del Google Play Store</a>)</li><li>Baixi i instal\u00b7li l'aplicaci\u00f3.</li></ol><b>Despr\u00e9s, obri i configuri el Google Authenticator.</b><ol><li>Al Google Authenticator, toqui Men\u00fa i seleccioni "Configura el compte".</li><li>Seleccioni "Escanejar un codi de barres".</li><li>Utilitzi la c\u00e0mera del tel\u00e8fon per escanejar el codi de barres.</li><li>Quan hagi escanejat el codi de barres, cliqui el bot\u00f3 Continua.</li></ol>
+Display_SetupOtp_Android_Steps=<b>Instal\u00b7li l'aplicaci\u00f3 Google Authenticator per a l'Android.</b><ol><li>Al tel\u00e8fon, vagi al Google Play Store.</li><li>Cerqui <b>Google Authenticator</b>.<br/>(<a target\="playstore" href\="https\://play.google.com/store/apps/details?id\=com.google.android.apps.authenticator2">Baixi'l del Google Play Store</a>)</li><li>Baixi i instal\u00b7li l'aplicaci\u00f3.</li></ol><b>Despr\u00e9s, obri i configuri el Google Authenticator.</b><ol><li>Al Google Authenticator, toqui Men\u00fa i seleccioni "Configura el compte".</li><li>Seleccioni "Escanejar un codi de barres".</li><li>Utilitzi la c\u00e0mera del tel\u00e8fon per escanejar el codi de barres.</li><li>Quan hagi escanejat el codi de barres, cliqui el bot\u00f3 Continua.</li></ol>
 Display_SetupOtp_iPhone_Title=iPhone
 Display_SetupOtp_iPhone_Steps=<b>A l'iPhone, toqui la icona de l'App Store.</b><ol><li>Al tel\u00e8fon, vagi a l'App Store.</li><li>Cerqui <b>Google Authenticator</b>.<br/>(<a target\="itunesstore" href\="https\://itunes.apple.com/us/app/google-authenticator/id388497605?mt\=8">Baixi'l de l'App Store</a>)</li><li>Toqui l'aplicaci\u00f3 i despr\u00e9s toqui Gratis per baixar-la i instal\u00b7lar-la.</li></ol><b>Despr\u00e9s, obri i configuri el Google Authenticator.</b><ol><li>Al Google Authenticator, toqui "+" i despr\u00e9s "Escanejar un codi de barres".</li><li>Utilitzi la c\u00e0mera del tel\u00e8fon per escanejar el codi de barres.</li><li>Quan hagi escanejat el codi de barres, cliqui el bot\u00f3 Continua.</li></ol>
 Display_SetupOtp_Other_Title=Altres
-Display_SetupOtp_Other_Steps=<b>Trobi una aplicaci\u00f3 compatible de dos factors.</b><ul><li>Intenti cercar a la botiga d'aplicacions del seu dispositiu <b>Google Authenticator</b>.<br/>Molts dispositius tenen aplicacions compatibles.</li><li>Intenti buscar una aplicaci\u00f3 que admeti "<b>testimonis de seguretat TOTP"</b> o "RFC6238"</li><li>Baixi i instal\u00b7li l'aplicaci\u00f3.</li></ul><b>Despr\u00e9s, obri i configuri l'aplicaci\u00f3.</b><ol><li>Introdueixi les dades d'aqu\u00ed sota o escanegi el codi segons les instruccions de l'aplicaci\u00f3.</li><li>Quan hagi configurat l'aplicaci\u00f3, cliqui el bot\u00f3 Continua.</li></ol>
+Display_SetupOtp_Other_Steps=<b>Trobi una aplicaci\u00f3 compatible de dos factors.</b><ul><li>Intenti cercar <b>Google Authenticator</b> a la botiga d'aplicacions del seu dispositiu.<br/>Molts dispositius tenen aplicacions compatibles.</li><li>Intenti buscar una aplicaci\u00f3 que admeti "<b>testimonis de seguretat TOTP"</b> o "RFC6238"</li><li>Baixi i instal\u00b7li l'aplicaci\u00f3.</li></ul><b>Despr\u00e9s, obri i configuri l'aplicaci\u00f3.</b><ol><li>Introdueixi les dades d'aqu\u00ed sota o escanegi el codi segons les instruccions de l'aplicaci\u00f3.</li><li>Quan hagi configurat l'aplicaci\u00f3, cliqui el bot\u00f3 Continua.</li></ol>
+
+
 Display_TokenDestination=Destinaci\u00f3 del testimoni
-Display_TokenResend=El vostre codi de seguretat hauria d'arribar aviat. Si ja ha passat una estona i encara no heu rebut cap codi, feu clic al bot\u00f3 Torna a enviar el codi per rebre'n un de nou.
+Display_TokenResend=El seu codi de seguretat hauria d'arribar aviat. Si ja ha passat una estona i encara no ha rebut cap codi, faci clic al bot\u00f3 Torna a enviar el codi per rebre'n un de nou.
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
-Display_WarnExistingOtpSecretTime=Ja heu inscrit el dispositiu el dia <span class\="timestamp">%1%</span>. Podeu provar el vostre dispositiu actual escrivint el codi generat aqu\u00ed sota. Si continueu, podeu tornar a configurar el dispositiu actual.
+Display_WarnExistingOtpSecretTime=Ja heu inscrit el vostre dispositiu (<span class="timestamp">%1%</span>). Podeu provar el dispositiu actual tocant el codi que s'ha generat a continuaci\u00f3. Si continueu, podreu tornar a configurar-lo.
 Display_WarnExistingOtpSecret=Ja ha inscrit el tel\u00e8fon. Pot provar el seu dispositiu actual escrivint el codi generat aqu\u00ed sota. Si continua, pot tornar a configurar el dispositiu actual.
 Display_WarnExistingResponseTime=Ja ha configurat les preguntes desafiament/resposta el <span class\="timestamp">%1%</span>. Si continua, pot tornar a respondre les preguntes.
 Display_WarnExistingResponse=Ja ha configurat les preguntes desafiament/resposta. Si continua, pot tornar a respondre les preguntes.
@@ -269,7 +271,7 @@ Long_Title_Shortcuts=Dreceres personalitzades.
 Long_Title_UpdateProfile=Actualitzar les dades del perfil d'usuari.
 Long_Title_UserEventHistory=Historial d'esdeveniments de la contrasenya. Miri quan ha canviat la contrasenya en el passat.
 Long_Title_UserInformation=Informaci\u00f3 sobre la contrasenya i sobre la pol\u00edtica de contrasenyes.
-Long_Title_DeleteAccount=Suprimiu el compte i el perfil d'aquest servei
+Long_Title_DeleteAccount=Suprimir el compte i el perfil d'aquest servei
 Long_Title_VerificationSend=Abans de poder seleccionar aquest usuari, cal verificar-ne la identitat. Seleccioni un m\u00e8tode de verificaci\u00f3.
 Title_AnsweredQuestions=Preguntes amb resposta
 Title_ActivateUser=Activa el compte
@@ -320,7 +322,7 @@ Title_DeleteAccount=Suprimeix el meu compte
 Title_Management=Administraci\u00f3
 Title_DirectReports=Informes directes
 Title_Organization=Organitzaci\u00f3
-Tooltip_PasswordStrength=El mesurador de la seguretat de la contrasenya mostra fins a quin punt \u00e9s f\u00e0cil d'endevinar. Segueixi aquests consells per refor\u00e7ar la contrasenya\:<ul><li>Allargui la contrasenya</li><li>No repeteixi lletres ni n\u00fameros</li><li>Barregi maj\u00fascules i min\u00fascules</li><li>Afegeixi m\u00e9s n\u00fameros</li><li>Afegeixi m\u00e9s s\u00edmbols</li></ul>
+Tooltip_PasswordStrength=L'indicador de seguretat de la contrasenya mostra amb quina facilitat es pot endevinar. Seguiu les instruccions seg\u00fcents per crear una contrasenya m\u00e9s segura\:<ul><li>Feu que sigui m\u00e9s llarga.</li><li>No repetiu cap lletra ni n\u00famero.</li><li>Feu servir maj\u00fascules i min\u00fascules.</li><li>Afegiu-hi m\u00e9s n\u00fameros.</li><li>Afegiu-hi m\u00e9s s\u00edmbols.</li></ul>
 Confirm_DeleteUser=Segur que vol procedir? Si continua, l'usuari seleccionat s'eliminar\u00e0 definitivament. Aquesta acci\u00f3 no es pot desfer.
 Confirm=Segur que vol procedir?
 Value_False=Fals
