--- a/src/main/resources/password/pwm/i18n/Display_de.properties
+++ b/src/main/resources/password/pwm/i18n/Display_de.properties
@@ -1,4 +1,3 @@
-#Tue, 20 Jun 2017 12:52:39 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -78,6 +77,7 @@ Display_ChangePasswordForm=Geben Sie die folgenden Daten ein. Dieser Schritt ist
 Display_CheckingData=Daten werden gepr\u00fcft ...
 Display_CheckingPassword=Passwort wird gepr\u00fcft ...
 Display_CheckingResponses=Antworten werden gepr\u00fcft ...
+Display_ClientDisconnect=Kommunikation mit dem Server nicht m\u00f6glich.
 Display_CommunicationError=Kommunikation mit dem Server nicht m\u00f6glich. Fahren Sie fort, wenn die Kommunikation mit dem Server m\u00f6glich ist.
 Display_ConfirmResponses=Vergewissern Sie sich, dass die Antworten und Fragen richtig sind. \u00dcberpr\u00fcfen Sie die Rechtschreibung und Zeichensetzung. Wenn Sie Ihr Passwort vergessen, k\u00f6nnen Sie durch Beantworten dieser Sicherheitsfragen auf Ihr Konto zugreifen.
 Display_Day=Tag
@@ -132,7 +132,7 @@ Display_PleaseWait=Wird geladen ...
 Display_PleaseWaitNewUser=Das neue Konto wird konfiguriert. Dieser Vorgang kann einige Minuten dauern. Bitte gedulden Sie sich.
 Display_PleaseWaitPassword=Das Passwort wird ge\u00e4ndert. Dieser Vorgang kann einige Minuten dauern. Bitte gedulden Sie sich.
 Display_Random=Zufall
-Display_RecoverVerificationChoice=W\u00e4hlen Sie eine der folgenden Methoden zur \u00dcberpr\u00fcfung Ihrer Identit\u00e4t aus. Hinweis\: Wenn der Administrator mehrere \u00dcberpr\u00fcfungsarten anfordert, werden Sie wieder auf diese Seite geleitet, bis alle \u00dcberpr\u00fcfungskriterien erf\u00fcllt sind.
+Display_RecoverVerificationChoice=W\u00e4hlen Sie eine der folgenden Methoden zur Identit\u00e4ts\u00fcberpr\u00fcfung. Hinweis: Wenn Ihr Administrator mehrere Formen der Verifizierung fordert, werden Sie so oft zu dieser Seite zur\u00fcckgeleitet, bis alle Verifizierungskriterien erf\u00fcllt sind.
 Display_RecoverTokenSendChoices=Zur \u00dcberpr\u00fcfung Ihrer Identit\u00e4t wird Ihnen ein Sicherheitscode gesendet. W\u00e4hlen Sie aus, mit welcher Methode Sie den Sicherheitscode empfangen m\u00f6chten.
 Display_RecoverTokenSendChoiceEmail=Code an die registrierte Email-Adresse senden.
 Display_RecoverTokenSendChoiceSMS=Code in einer Textnachricht (SMS) an das Mobiltelefon senden.
@@ -150,7 +150,7 @@ Display_ResponsesPrompt=Geben Sie die Sicherheitsantworten ein
 Display_SelectionIndicator=W\u00e4hlen Sie ein Frageelement aus der Liste aus
 Display_SearchCompleted=Suche abgeschlossen.
 Display_SearchResultsInfo=%1% Ergebnisse in %2% zur\u00fcckgegeben.
-Display_SearchResultsExceeded=Die Suchergebnisse \u00fcberschreiten die maximale Suchgr\u00f6\u00dfe
+Display_SearchResultsExceeded=Suchergebnisse \u00fcberschreiten den maximalen Umfang f\u00fcr Suchanfragen
 Display_SetRandomPasswordPrompt=F\u00fcr diesen Benutzer ein neues Zufallspasswort festlegen?
 Display_SearchResultsNone=Keine Ergebnisse
 Display_Second=Sekunde
@@ -165,12 +165,12 @@ Display_SetupOtp_Android_Steps=<b>Installieren Sie die Google Authenticator-App 
 Display_SetupOtp_iPhone_Title=iPhone
 Display_SetupOtp_iPhone_Steps=<b>Tippen Sie auf dem iPhone auf das App Store-Symbol.</b><ol><li>\u00d6ffnen Sie auf dem Mobiltelefon den App Store.</li><li>Suchen Sie nach <b>Google Authenticator</b>.<br/>(<a target\="itunesstore" href\="https\://itunes.apple.com/us/app/google-authenticator/id388497605?mt\=8">Aus dem App Store herunterladen</a>)</li><li>Tippen Sie auf die App und tippen Sie dann auf 'Kostenlos', um die App herunterzuladen und zu installieren.</li></ol><b>\u00d6ffnen und konfigurieren Sie dann Google Authenticator.</b><ol><li>Tippen Sie in Google Authenticator auf "+" und dann auf "Barcode scannen".</li><li>Scannen Sie den Barcode mit der Kamera des Mobiltelefons.</li><li>Klicken Sie nach dem Scannen des Barcodes auf die Schaltfl\u00e4che 'Weiter'.</li></ol>
 Display_SetupOtp_Other_Title=Sonstige
-Display_SetupOtp_Other_Steps=<b>Suchen Sie eine kompatible Zwei-Faktoren-App.</b><ul><li>Suchen Sie im App-Store Ihres Ger\u00e4ts nach <b>Google Authenticator</b>.<br/>F\u00fcr viele Ger\u00e4te sind kompatible Apps verf\u00fcgbar.</li><li>Suchen Sie nach einer App, die "<b>TOTP-Sicherheitstoken"</b> oder "RFC6238" unterst\u00fctzt</li><li> Laden Sie die Anwendung herunter und installieren Sie sie.</li></ul><b>\u00d6ffnen und konfigurieren Sie dann die App.</b><ol><li>Geben Sie die Daten unten ein oder scannen Sie den Code wie von der App angewiesen.</li><li>Klicken Sie nach der Konfiguration der App auf die Schaltfl\u00e4che 'Weiter'.</li></ol>
+Display_SetupOtp_Other_Steps=<b>Suchen Sie eine kompatible Zwei-Faktoren-App.</b><ul><li>Suchen Sie im App-Store Ihres Ger\u00e4ts nach <b>Google Authenticator</b>.<br/>F\u00fcr viele Ger\u00e4te sind kompatible Apps verf\u00fcgbar.</li><li>Suchen Sie nach einer App, die "<b>TOTP-Sicherheitstoken"</b> oder "RFC6238" unterst\u00fctzt.</li><li> Laden Sie die Anwendung herunter und installieren Sie sie.</li></ul><b>\u00d6ffnen und konfigurieren Sie dann die App.</b><ol><li>Geben Sie die Daten unten ein oder scannen Sie den Code wie von der App angewiesen.</li><li>Klicken Sie nach der Konfiguration der App auf die Schaltfl\u00e4che 'Weiter'.</li></ol>
 Display_TokenDestination=Token-Ziel
 Display_TokenResend=Der Sicherheitscode sollte kurz nach der Anforderung ankommen. Wenn Sie bereits eine gewisse Zeit gewartet haben und keinen Code erhalten haben, klicken Sie auf die Schaltfl\u00e4che 'Code neu senden', damit Ihnen ein neuer Code gesendet wird.
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
-Display_WarnExistingOtpSecretTime=Sie haben das Ger\u00e4t bereits am <span class\="timestamp">%1%</span> registriert. Um das aktuelle Ger\u00e4t zu testen, geben Sie unten den generierten Code ein. Wenn Sie fortfahren, k\u00f6nnen Sie das aktuelle Ger\u00e4t neu konfigurieren.
+Display_WarnExistingOtpSecretTime=Sie haben das Ger\u00e4t bereits am/um <span class="timestamp">%1%</span> registriert.  Um Ihr aktuelles Ger\u00e4t zu testen, geben Sie unten den generierten Code ein. Wenn Sie fortfahren, k\u00f6nnen Sie das aktuelle Ger\u00e4t neu konfigurieren.
 Display_WarnExistingOtpSecret=Sie haben das Ger\u00e4t bereits registriert. Um Ihr aktuelles Ger\u00e4t zu testen, geben Sie unten den generierten Code ein. Wenn Sie fortfahren, k\u00f6nnen Sie das aktuelle Ger\u00e4t neu konfigurieren.
 Display_WarnExistingResponseTime=Sie haben die Sicherheitsantworten bereits am <span class\="timestamp">%1%</span> eingerichtet. Wenn Sie fortfahren, k\u00f6nnen Sie die Fragen neu beantworten.
 Display_WarnExistingResponse=Sie haben die Sicherheitsantworten bereits eingerichtet. Wenn Sie fortfahren, k\u00f6nnen Sie die Fragen neu beantworten.
@@ -320,7 +320,7 @@ Title_DeleteAccount=Mein Konto l\u00f6schen
 Title_Management=Verwaltung
 Title_DirectReports=Direkt Unterstellte
 Title_Organization=Organisation
-Tooltip_PasswordStrength=Die Anzeige der Passwortst\u00e4rke gibt an, wie einfach das Passwort zu erraten ist. Befolgen Sie diese Tipps, um die Passwortst\u00e4rke zu verbessern\:<ul><li>Verwenden Sie ein l\u00e4ngeres Passwort.</li><li>Wiederholen Sie die Buchstaben und Zahlen nicht.</li><li>Verwenden Sie eine Kombination aus Gro\u00df- und Kleinbuchstaben.</li><li>F\u00fcgen Sie weitere Zahlen hinzu.</li><li>F\u00fcgen Sie weitere Symbolzeichen hinzu.</li></ul>
+Tooltip_PasswordStrength=Die Sicherheit des eingegebenen Passworts wird gemessen. Das Ergebnis zeigt an, wie leicht sich Ihr Passwort erraten l\u00e4sst. Wenden Sie folgende Tipps an, um ein sicheres Passwort zu erstellen\:<ul><li>W\u00e4hlen Sie ein langes Passwort.</li><li>Wiederholen Sie keine Buchstaben oder Zahlen.</li><li>Verwenden Sie Gro\u00df- und Kleinschreibung.</li><li>Verwenden Sie mehr Zahlen.</li><li>Verwenden Sie mehr Sonderzeichen.</li></ul>
 Confirm_DeleteUser=Sind Sie sicher, dass Sie fortfahren m\u00f6chten? Wenn Sie fortfahren, wird der ausgew\u00e4hlte Benutzer dauerhaft gel\u00f6scht. Dies kann nicht r\u00fcckg\u00e4ngig gemacht werden.
 Confirm=Weiter?
 Value_False=Falsch
