--- a/src/main/resources/password/pwm/i18n/Display_it.properties
+++ b/src/main/resources/password/pwm/i18n/Display_it.properties
@@ -1,4 +1,3 @@
-#Tue, 20 Jun 2017 12:52:39 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -78,6 +77,7 @@ Display_ChangePasswordForm=Immettere i dati seguenti. L'operazione \u00e8 necess
 Display_CheckingData=Controllo dati in corso\u2026
 Display_CheckingPassword=Controllo password in corso\u2026
 Display_CheckingResponses=Controllo risposte in corso\u2026
+Display_ClientDisconnect=Impossibile comunicare con il server.
 Display_CommunicationError=Impossibile comunicare con il server. Quando si \u00e8 pronti, continuare.
 Display_ConfirmResponses=Verificare che risposte e domande siano corrette. Controllare ortografia e punteggiatura. Se si dimentica la password, sar\u00e0 possibile accedere al proprio account rispondendo a queste domande di sicurezza.
 Display_Day=giorno
@@ -132,7 +132,7 @@ Display_PleaseWait=Caricamento in corso\u2026
 Display_PleaseWaitNewUser=\u00c8 in corso la configurazione del nuovo account. La procedura potrebbe richiedere alcuni minuti. Si prega di attendere.
 Display_PleaseWaitPassword=\u00c8 in corso la modifica della password. La procedura potrebbe richiedere alcuni minuti. Si prega di attendere.
 Display_Random=Casuale
-Display_RecoverVerificationChoice=Per verificare la propria identit\u00e0, selezionare uno dei metodi seguenti. Nota\: se l'amministratore richiede pi\u00f9 forme di verifica, l'utente verr\u00e0 reindirizzato a questa pagina fino a quando non soddisfa tutti i criteri di verifica.
+Display_RecoverVerificationChoice=Per verificare la propria identit\u00e0, selezionare uno dei metodi seguenti. Nota\: se l'amministratore richiede pi\u00f9 forme di verifica, l'utente verr\u00e0 reindirizzato a questa pagina fino a quando tutti i criteri non saranno soddisfatti.
 Display_RecoverTokenSendChoices=All'utente verr\u00e0 inviato un codice di sicurezza per verificarne l'identit\u00e0. Scegliere il metodo desiderato per la ricezione del codice di sicurezza.
 Display_RecoverTokenSendChoiceEmail=Inviare il codice all'indirizzo e-mail dell'utente registrato.
 Display_RecoverTokenSendChoiceSMS=Inviare il codice al numero di cellulare dell'utente utilizzando un SMS.
@@ -150,7 +150,7 @@ Display_ResponsesPrompt=Digitare le risposte di sicurezza
 Display_SelectionIndicator=Selezionare una domanda dall'elenco
 Display_SearchCompleted=Ricerca completata.
 Display_SearchResultsInfo=Restituiti %1% risultati su %2%.
-Display_SearchResultsExceeded=I risultati della ricerca hanno superato la dimensione massima della ricerca
+Display_SearchResultsExceeded=I risultati hanno superato la dimensione massima di ricerca
 Display_SetRandomPasswordPrompt=Impostare una nuova password casuale per l'utente?
 Display_SearchResultsNone=Nessun risultato
 Display_Second=secondo
@@ -170,7 +170,7 @@ Display_TokenDestination=Destinazione token
 Display_TokenResend=Il codice di sicurezza dovrebbe arrivare immediatamente. Se dopo aver atteso il codice non \u00e8 stato ricevuto, fare clic sul pulsante Reinvia codice per ricevere un nuovo codice.
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
-Display_WarnExistingOtpSecretTime=Il dispositivo \u00e8 gi\u00e0 stato registrato il <span class\="timestamp">%1%</span>. Per eseguire una prova del dispositivo attuale, digitare di seguito il codice generato. Continuando \u00e8 possibile riconfigurare il dispositivo attuale.
+Display_WarnExistingOtpSecretTime=Il dispositivo \u00e8 gi\u00e0 stato registrato su <span class="timestamp">%1%</span>. Per eseguire una prova del dispositivo attuale, digitare di seguito il codice generato. Continuando \u00e8 possibile riconfigurare il dispositivo attuale.
 Display_WarnExistingOtpSecret=Il dispositivo \u00e8 gi\u00e0 stato registrato. Per eseguire una prova del dispositivo attuale, digitare di seguito il codice generato. Continuando \u00e8 possibile riconfigurare il dispositivo attuale.
 Display_WarnExistingResponseTime=Le domande/risposte di autenticazione sono gi\u00e0 state impostate il <span class\="timestamp">%1%</span>. Continuando \u00e8 possibile rispondere nuovamente alle domande.
 Display_WarnExistingResponse=Le domande/risposte di autenticazione sono gi\u00e0 state impostate. Continuando \u00e8 possibile rispondere nuovamente alle domande.
@@ -212,7 +212,7 @@ Field_Password=Password
 Field_PasswordExpirationTime=Ora di scadenza della password
 Field_PasswordExpired=Password scaduta
 Field_PasswordLocked=Password bloccata (rilevamento di intrusione)
-Field_PasswordPreExpired=Pre-scadenza password
+Field_PasswordPreExpired=Password pre-scaduta
 Field_PasswordSetTime=Ora di impostazione della password
 Field_PasswordSetTimeDelta=Differenza ora di impostazione della password
 Field_PasswordViolatesPolicy=Viola la policy della password
@@ -320,7 +320,7 @@ Title_DeleteAccount=Cancella account personale
 Title_Management=Gestione
 Title_DirectReports=Rapporti diretti
 Title_Organization=Organizzazione
-Tooltip_PasswordStrength=L'indicatore di complessit\u00e0 indica se la password \u00e8 facile da indovinare o meno. Per aumentare il grado di complessit\u00e0 della password, seguire i suggerimenti riportati di seguito\:<ul><li>Creare una password pi\u00f9 lunga</li><li>Non ripetere lettere o numeri</li><li>Usare lettere maiuscole e minuscole</li><li>Aggiungere pi\u00f9 numeri</li><li>Aggiungere pi\u00f9 simboli</li></ul>
+Tooltip_PasswordStrength=Il misuratore di complessit\u00e0 della password mostra il grado di complessit\u00e0 della password dell'utente. Per rendere pi\u00f9 complessa la password, provare a\:<ul><li>Aumentare il numero di caratteri</li><li>Non ripetere lettere o numeri</li><li>Utilizzare lettere maiuscole e minuscole</li><li>Aggiungere altri numeri</li><li>Aggiungere altri simboli</li></ul>
 Confirm_DeleteUser=Continuare? Se si continua, l'utente selezionato verr\u00e0 eliminato definitivamente. L'operazione \u00e8 irreversibile.
 Confirm=Continuare?
 Value_False=Falso
