--- a/src/main/resources/password/pwm/i18n/Display_sv.properties
+++ b/src/main/resources/password/pwm/i18n/Display_sv.properties
@@ -1,4 +1,3 @@
-#Tue, 20 Jun 2017 12:52:39 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -78,6 +77,7 @@ Display_ChangePasswordForm=Ange f\u00f6ljande data. Detta kr\u00e4vs f\u00f6r at
 Display_CheckingData=Kontrollerar data ...
 Display_CheckingPassword=Kontrollerar l\u00f6senordet ...
 Display_CheckingResponses=Kontrollerar svar ...
+Display_ClientDisconnect=Det gick inte att kommunicera med servern.
 Display_CommunicationError=Det g\u00e5r inte att kommunicera med servern. Forts\u00e4tt n\u00e4r du \u00e4r klar.
 Display_ConfirmResponses=Se till att dina fr\u00e5gor och svar \u00e4r korrekta. Kontrollera stavning och interpunktion. Om du inte kan komma ih\u00e5g ditt l\u00f6senord kommer du att kunna komma \u00e5t ditt konto genom att svara p\u00e5 dessa s\u00e4kerhetsfr\u00e5gor.
 Display_Day=dag
@@ -95,7 +95,7 @@ Display_Helpdesk=Ange s\u00f6kdata f\u00f6r anv\u00e4ndaren.
 Display_HelpdeskOtpValidation=Uppmana anv\u00e4ndaren att l\u00e4sa in sin mobilautentiseringsapp och dela nuvarande l\u00f6senord.
 Display_Hour=timme
 Display_Hours=timmar
-Display_IdleTimeout=Timeout vid inaktivitet\:
+Display_IdleTimeout=Timeout f\u00f6r inaktivitet\:
 Display_IdleWarningMessage=Din session h\u00e5ller p\u00e5 att uppn\u00e5 timeout. Klicka n\u00e5gonstans p\u00e5 den h\u00e4r sidan f\u00f6r att forts\u00e4tta.
 Display_IdleWarningTitle=Timeout vid inaktivitet
 Display_JavascriptRequired=Javascript kr\u00e4vs f\u00f6r att kunna visa den h\u00e4r sidan.
@@ -132,7 +132,7 @@ Display_PleaseWait=L\u00e4ser ...
 Display_PleaseWaitNewUser=Ditt nya konto konfigureras. Detta kan ta flera minuter. V\u00e4nta.
 Display_PleaseWaitPassword=Ditt l\u00f6senord \u00e4ndras. Detta kan ta flera minuter. V\u00e4nta.
 Display_Random=Slumpm\u00e4ssigt
-Display_RecoverVerificationChoice=V\u00e4lj en av f\u00f6ljande metoder f\u00f6r att verifiera din identitet. Obs! Om administrat\u00f6ren kr\u00e4ver flera former av verifiering dirigeras du tillbaka till den h\u00e4r sidan tills det att samtliga verifieringskriterier \u00e4r uppfyllda.
+Display_RecoverVerificationChoice=V\u00e4lj n\u00e5gon av f\u00f6ljande metoder f\u00f6r att verifiera din identitet. Obs! Om administrat\u00f6ren kr\u00e4ver flera former av verifiering omdirigeras du tillbaka till den h\u00e4r sidan tills alla verifieringskriterier uppfyllts.
 Display_RecoverTokenSendChoices=F\u00f6r att verifiera din identitet skickas en s\u00e4kerhetskod till dig. Ange med vilken metod du helst vill ta emot s\u00e4kerhetskoden.
 Display_RecoverTokenSendChoiceEmail=Skicka koden till din registrerade e-postadress.
 Display_RecoverTokenSendChoiceSMS=Skicka koden till din mobil som textmeddelande (SMS).
@@ -150,9 +150,9 @@ Display_ResponsesPrompt=Skriv svaren p\u00e5 dina s\u00e4kerhetsfr\u00e5gor
 Display_SelectionIndicator=V\u00e4lj en fr\u00e5ga i listan
 Display_SearchCompleted=S\u00f6kningen \u00e4r klar.
 Display_SearchResultsInfo=Returnerade %1% resultat p\u00e5 %2%.
-Display_SearchResultsExceeded=S\u00f6kresultaten \u00f6verskred den maximala s\u00f6kningsstorleken.
+Display_SearchResultsExceeded=S\u00f6kresultaten \u00f6verskred maximal s\u00f6kstorlek
 Display_SetRandomPasswordPrompt=Ange ett nytt slumpm\u00e4ssigt l\u00f6senord f\u00f6r den h\u00e4r anv\u00e4ndaren?
-Display_SearchResultsNone=Inga resultat.
+Display_SearchResultsNone=Inga resultat
 Display_Second=sekund
 Display_Seconds=sekunder
 Display_SetupHelpdeskResponses=<p>Din administrat\u00f6r kr\u00e4ver att du l\u00e4mnar f\u00f6ljande svar. Dessa svar anv\u00e4nds f\u00f6r att verifiera din identitet om du kontaktar din supportavdelning f\u00f6r att f\u00e5 hj\u00e4lp.</p>
@@ -170,7 +170,7 @@ Display_TokenDestination=Tokenm\u00e5l
 Display_TokenResend=Din s\u00e4kerhetskod b\u00f6r komma direkt. Klicka p\u00e5 knappen Skicka kod p\u00e5 nytt f\u00f6r att f\u00e5 en ny kod om du har v\u00e4ntat en stund och fortfarande inte f\u00e5tt den.
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
-Display_WarnExistingOtpSecretTime=Du har redan registrerat din enhet p\u00e5 <span class\="timestamp">%1%</span>. Du kan testa din nuvarande enhet genom att skriva den genererade koden nedan. Om du forts\u00e4tter kan du konfigurera om din nuvarande enhet.
+Display_WarnExistingOtpSecretTime=Du har redan registrerat din enhet. Detta gjorde du den <span class="timestamp">%1%</span>. Du kan testa din aktuella enhet genom att skriva in koden som genererats nedan. Om du forts\u00e4tter kan du konfigurera om din aktuella enhet.
 Display_WarnExistingOtpSecret=Du har redan registrerat din enhet. Du kan testa din nuvarande enhet genom att skriva den genererade koden nedan. Om du forts\u00e4tter kan du konfigurera om din nuvarande enhet.
 Display_WarnExistingResponseTime=Du har redan st\u00e4llt in dina kontrollfr\u00e5gor och svar <span class\="timestamp">%1%</span>. Om du forts\u00e4tter kan du ange nya svar p\u00e5 fr\u00e5gorna.
 Display_WarnExistingResponse=Du har redan st\u00e4llt in dina kontrollfr\u00e5gor och svar. Om du forts\u00e4tter kan du ange nya svar p\u00e5 fr\u00e5gorna.
@@ -320,7 +320,7 @@ Title_DeleteAccount=Ta bort mitt konto
 Title_Management=Hantering
 Title_DirectReports=Underst\u00e4llda
 Title_Organization=Organisation
-Tooltip_PasswordStrength=M\u00e4taren f\u00f6r l\u00f6senordets styrka visar hur l\u00e4tt det \u00e4r att gissa ditt l\u00f6senord. Du kan f\u00f6rs\u00f6ka med f\u00f6ljande f\u00f6r att g\u00f6ra l\u00f6senordet starkare\:<ul><li>G\u00f6r l\u00f6senordet l\u00e4ngre</li><li>Upprepa inte bokst\u00e4ver och siffror</li><li>Anv\u00e4nd bokst\u00e4ver med olika skiftl\u00e4gen (gemener och versaler)</li><li>L\u00e4gg till fler siffror</li><li>L\u00e4gg till fler symboltecken</li></ul>
+Tooltip_PasswordStrength=L\u00f6senordss\u00e4kerhetsm\u00e4taren visar hur enkelt det \u00e4r att gissa ditt l\u00f6senord. Testa f\u00f6ljande f\u00f6r att g\u00f6ra ditt l\u00f6senord starkare\:<ul><li>G\u00f6r l\u00f6senordet l\u00e4ngre</li><li>Upprepa inte bokst\u00e4ver eller siffror</li><li>Anv\u00e4nd en blandning av versaler och gemener</li><li>L\u00e4gg till fler siffror</li><li>L\u00e4gg till fler symboltecken</li></ul>
 Confirm_DeleteUser=Vill du forts\u00e4tta? Om du forts\u00e4tter raderas den markerade anv\u00e4ndaren permanent. Denna \u00e5tg\u00e4rd g\u00e5r inte att \u00e5ngra.
 Confirm=Vill du forts\u00e4tta?
 Value_False=Falskt
