--- a/src/main/resources/password/pwm/i18n/Display_zh_CN.properties
+++ b/src/main/resources/password/pwm/i18n/Display_zh_CN.properties
@@ -1,4 +1,3 @@
-#Tue, 20 Jun 2017 12:52:39 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -78,6 +77,7 @@ Display_ChangePasswordForm=\u8bf7\u8f93\u5165\u4ee5\u4e0b\u6570\u636e\u3002\u7cf
 Display_CheckingData=\u6b63\u5728\u68c0\u67e5\u6570\u636e...
 Display_CheckingPassword=\u6b63\u5728\u68c0\u67e5\u53e3\u4ee4...
 Display_CheckingResponses=\u6b63\u5728\u68c0\u67e5\u7b54\u6848...
+Display_ClientDisconnect=\u65e0\u6cd5\u4e0e\u670d\u52a1\u5668\u901a\u4fe1\u3002
 Display_CommunicationError=\u65e0\u6cd5\u4e0e\u670d\u52a1\u5668\u901a\u4fe1\u3002\u51c6\u5907\u597d\u65f6\u8bf7\u7ee7\u7eed\u3002
 Display_ConfirmResponses=\u8bf7\u786e\u4fdd\u60a8\u7684\u7b54\u6848\u548c\u95ee\u9898\u662f\u6b63\u786e\u7684\u3002\u8bf7\u68c0\u67e5\u62fc\u5199\u548c\u6807\u70b9\u7b26\u53f7\u3002\u5982\u679c\u5fd8\u8bb0\u53e3\u4ee4\uff0c\u5219\u9700\u63d0\u4f9b\u4ee5\u4e0b\u5b89\u5168\u6027\u95ee\u9898\u7684\u7b54\u6848\u624d\u80fd\u8bbf\u95ee\u5e10\u6237\u3002
 Display_Day=\u5929
@@ -132,7 +132,7 @@ Display_PleaseWait=\u6b63\u5728\u88c5\u8f7d...
 Display_PleaseWaitNewUser=\u6b63\u5728\u914d\u7f6e\u60a8\u7684\u65b0\u5e10\u6237\u3002\u6b64\u8fc7\u7a0b\u53ef\u80fd\u9700\u8981\u6570\u5206\u949f\uff0c\u8bf7\u8010\u5fc3\u7b49\u5f85\u3002
 Display_PleaseWaitPassword=\u6b63\u5728\u66f4\u6539\u60a8\u7684\u53e3\u4ee4\u3002\u6b64\u8fc7\u7a0b\u53ef\u80fd\u9700\u8981\u6570\u5206\u949f\uff0c\u8bf7\u8010\u5fc3\u7b49\u5f85\u3002
 Display_Random=\u968f\u673a
-Display_RecoverVerificationChoice=\u8bf7\u9009\u62e9\u4e0b\u9762\u7684\u4e00\u79cd\u65b9\u6cd5\u6821\u9a8c\u60a8\u7684\u8eab\u4efd\u3002\u6ce8\u610f\uff1a\u5982\u679c\u7ba1\u7406\u5458\u8981\u6c42\u6267\u884c\u591a\u79cd\u5f62\u5f0f\u7684\u6821\u9a8c\uff0c\u60a8\u5c06\u91cd\u65b0\u8fd4\u56de\u5230\u6b64\u9875\u9762\uff0c\u76f4\u5230\u7b26\u5408\u6240\u6709\u6821\u9a8c\u51c6\u5219\u3002
+Display_RecoverVerificationChoice=\u8bf7\u9009\u62e9\u4e0b\u5217\u4e00\u79cd\u65b9\u5f0f\u6821\u9a8c\u8eab\u4efd\u3002\u6ce8\u610f\uff1a\u5982\u679c\u60a8\u7684\u7ba1\u7406\u5458\u8981\u6c42\u591a\u79cd\u6821\u9a8c\u5f62\u5f0f\uff0c\u60a8\u5c06\u91cd\u5b9a\u5411\u56de\u6b64\u9875\u9762\uff0c\u76f4\u5230\u6ee1\u8db3\u6240\u6709\u6821\u9a8c\u51c6\u5219\u3002
 Display_RecoverTokenSendChoices=\u4e3a\u4e86\u6821\u9a8c\u60a8\u7684\u8eab\u4efd\uff0c\u7cfb\u7edf\u4f1a\u5411\u60a8\u53d1\u9001\u4e00\u4e2a\u5b89\u5168\u4ee3\u7801\u3002\u8bf7\u9009\u62e9\u60a8\u66f4\u613f\u610f\u91c7\u7528\u7684\u5b89\u5168\u4ee3\u7801\u63a5\u6536\u65b9\u6cd5\u3002
 Display_RecoverTokenSendChoiceEmail=\u5c06\u4ee3\u7801\u53d1\u9001\u5230\u60a8\u7684\u5df2\u6ce8\u518c\u7535\u5b50\u90ae\u4ef6\u5730\u5740\u3002
 Display_RecoverTokenSendChoiceSMS=\u4f7f\u7528\u77ed\u4fe1 (SMS) \u5c06\u4ee3\u7801\u53d1\u9001\u5230\u60a8\u7684\u79fb\u52a8\u7535\u8bdd\u3002
@@ -150,9 +150,9 @@ Display_ResponsesPrompt=\u8bf7\u952e\u5165\u60a8\u7684\u5b89\u5168\u6027\u95ee\u
 Display_SelectionIndicator=\u8bf7\u9009\u62e9\u5217\u8868\u4e2d\u7684\u95ee\u9898\u9879
 Display_SearchCompleted=\u641c\u7d22\u5df2\u5b8c\u6210\u3002
 Display_SearchResultsInfo=\u8fd4\u56de\u4e86 %2% \u4e2d\u7684 %1% \u4e2a\u7ed3\u679c\u3002
-Display_SearchResultsExceeded=\u641c\u7d22\u7ed3\u679c\u8d85\u8fc7\u641c\u7d22\u5927\u5c0f\u4e0a\u9650\u3002
+Display_SearchResultsExceeded=\u641c\u7d22\u7ed3\u679c\u8d85\u8fc7\u6700\u5927\u641c\u7d22\u5927\u5c0f
 Display_SetRandomPasswordPrompt=\u662f\u5426\u4e3a\u6b64\u7528\u6237\u8bbe\u7f6e\u65b0\u7684\u968f\u673a\u53e3\u4ee4\uff1f
-Display_SearchResultsNone=\u6ca1\u6709\u7ed3\u679c\u3002
+Display_SearchResultsNone=\u65e0\u7ed3\u679c
 Display_Second=\u79d2
 Display_Seconds=\u79d2
 Display_SetupHelpdeskResponses=<p>\u7ba1\u7406\u5458\u8981\u6c42\u60a8\u63d0\u4f9b\u4e0b\u5217\u7b54\u6848\u3002\u5f53\u60a8\u8054\u7cfb\u54a8\u8be2\u53f0\u4ee5\u83b7\u53d6\u5e2e\u52a9\u65f6\uff0c\u7cfb\u7edf\u53ef\u4ee5\u7528\u8fd9\u4e9b\u7b54\u6848\u6821\u9a8c\u60a8\u7684\u8eab\u4efd\u3002</p>
@@ -170,7 +170,7 @@ Display_TokenDestination=\u4ee4\u724c\u76ee\u6807
 Display_TokenResend=\u60a8\u5c06\u7acb\u5373\u6536\u5230\u5b89\u5168\u4ee3\u7801\u3002\u5982\u679c\u957f\u65f6\u95f4\u672a\u6536\u5230\uff0c\u53ef\u5355\u51fb\u91cd\u53d1\u9001\u4ee3\u7801\u6309\u94ae\u4ee5\u63a5\u6536\u65b0\u4ee3\u7801\u3002
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
-Display_WarnExistingOtpSecretTime=\u60a8\u5df2\u5728 <span class\="timestamp">%1%</span> \u6ce8\u518c\u4e86\u8bbe\u5907\u3002\u60a8\u53ef\u4ee5\u901a\u8fc7\u5728\u4e0b\u9762\u952e\u5165\u751f\u6210\u7684\u4ee3\u7801\u6765\u6d4b\u8bd5\u5f53\u524d\u8bbe\u5907\u3002\u5982\u679c\u7ee7\u7eed\uff0c\u60a8\u53ef\u4ee5\u91cd\u65b0\u914d\u7f6e\u5f53\u524d\u8bbe\u5907\u3002
+Display_WarnExistingOtpSecretTime=\u60a8\u5df2\u5728 <span class="timestamp">%1%</span> \u4e2d\u6ce8\u518c\u8bbe\u5907\u3002\u60a8\u53ef\u901a\u8fc7\u5728\u4e0b\u65b9\u952e\u5165\u751f\u6210\u7684\u4ee3\u7801\u4ee5\u6d4b\u8bd5\u5f53\u524d\u8bbe\u5907\u3002\u5982\u679c\u9009\u62e9\u7ee7\u7eed\uff0c\u53ef\u4ee5\u91cd\u914d\u7f6e\u60a8\u7684\u5f53\u524d\u8bbe\u5907\u3002
 Display_WarnExistingOtpSecret=\u60a8\u5df2\u6ce8\u518c\u4e86\u8bbe\u5907\u3002\u60a8\u53ef\u4ee5\u901a\u8fc7\u5728\u4e0b\u9762\u952e\u5165\u751f\u6210\u7684\u4ee3\u7801\u6765\u6d4b\u8bd5\u5f53\u524d\u8bbe\u5907\u3002\u5982\u679c\u7ee7\u7eed\uff0c\u60a8\u53ef\u4ee5\u91cd\u65b0\u914d\u7f6e\u5f53\u524d\u8bbe\u5907\u3002
 Display_WarnExistingResponseTime=\u60a8\u5df2\u5728 <span class\="timestamp">%1%</span> \u8bbe\u7f6e\u8be2\u95ee/\u56de\u7b54\u7b54\u6848\u3002\u5982\u679c\u7ee7\u7eed\uff0c\u60a8\u53ef\u4ee5\u91cd\u65b0\u56de\u7b54\u76f8\u5173\u95ee\u9898\u3002
 Display_WarnExistingResponse=\u60a8\u5df2\u8bbe\u7f6e\u8be2\u95ee/\u56de\u7b54\u7b54\u6848\u3002\u5982\u679c\u7ee7\u7eed\uff0c\u60a8\u53ef\u4ee5\u91cd\u65b0\u56de\u7b54\u76f8\u5173\u95ee\u9898\u3002
@@ -278,8 +278,8 @@ Title_Captcha=\u6821\u9a8c
 Title_ChangePassword=\u66f4\u6539\u53e3\u4ee4
 Title_ConfirmResponses=\u786e\u8ba4\u5b89\u5168\u6027\u95ee\u9898
 Title_Error=\u9519\u8bef
-Title_ForgottenPassword=\u5fd8\u8bb0\u7684\u53e3\u4ee4
-Title_ForgottenUsername=\u5fd8\u8bb0\u7684\u7528\u6237\u540d
+Title_ForgottenPassword=\u5fd8\u8bb0\u4e86\u53e3\u4ee4
+Title_ForgottenUsername=\u5fd8\u8bb0\u4e86\u7528\u6237\u540d
 Title_GuestRegistration=Guest \u6ce8\u518c
 Title_GuestUpdate=\u66f4\u65b0 Guest \u7528\u6237
 Title_Helpdesk=\u54a8\u8be2\u53f0
@@ -298,7 +298,7 @@ Title_PeopleSearch=\u4eba\u7269\u641c\u7d22
 Title_PleaseWait=\u8bf7\u7a0d\u5019
 Title_RandomPasswords=\u968f\u673a\u53e3\u4ee4
 Title_RecentVerifications=\u6700\u8fd1\u6821\u9a8c
-Title_RecoverPassword=\u5fd8\u8bb0\u7684\u53e3\u4ee4
+Title_RecoverPassword=\u5fd8\u8bb0\u4e86\u53e3\u4ee4
 Title_RecoverRandomResponses=\u968f\u673a\u95ee\u9898
 Title_RecoverRequiredResponses=\u8981\u6c42\u7684\u95ee\u9898
 Title_SecurityResponses=\u5b89\u5168\u6027\u95ee\u9898\u56de\u7b54
@@ -320,7 +320,7 @@ Title_DeleteAccount=\u5220\u9664\u6211\u7684\u5e10\u6237
 Title_Management=\u7ba1\u7406
 Title_DirectReports=\u76f4\u63a5\u4e0b\u5c5e
 Title_Organization=\u7ec4\u7ec7
-Tooltip_PasswordStrength=\u53e3\u4ee4\u5f3a\u5ea6\u8868\u793a\u731c\u51fa\u53e3\u4ee4\u7684\u96be\u5ea6\u3002\u8bf7\u5c1d\u8bd5\u4e0b\u5217\u64cd\u4f5c\u4ee5\u589e\u52a0\u53e3\u4ee4\u5f3a\u5ea6\uff1a<ul><li>\u589e\u52a0\u53e3\u4ee4\u957f\u5ea6</li><li>\u4e0d\u91cd\u590d\u4f7f\u7528\u5b57\u6bcd\u6216\u6570\u5b57</li><li>\u4f7f\u7528\u6df7\u5408\u4e86\u5927\u5c0f\u5199\u7684\u5b57\u6bcd</li><li>\u6dfb\u52a0\u66f4\u591a\u6570\u5b57</li><li>\u6dfb\u52a0\u66f4\u591a\u7b26\u53f7\u5b57\u7b26</li></ul>
+Tooltip_PasswordStrength=\u53e3\u4ee4\u5f3a\u5ea6\u6307\u793a\u5668\u53ef\u663e\u793a\u8be5\u53e3\u4ee4\u7684\u7834\u8bd1\u96be\u5ea6\u3002\u8bf7\u5c1d\u8bd5\u4ee5\u4e0b\u65b9\u5f0f\u6765\u52a0\u5f3a\u53e3\u4ee4\u5f3a\u5ea6\uff1a<ul><li>\u4f7f\u7528\u66f4\u957f\u7684\u53e3\u4ee4</li><li>\u907f\u514d\u4f7f\u7528\u91cd\u590d\u7684\u5b57\u6bcd\u6216\u6570\u5b57</li><li>\u6df7\u5408\u4f7f\u7528\u5927\u5c0f\u5199\u5b57\u6bcd</li><li>\u6dfb\u52a0\u66f4\u591a\u6570\u5b57</li><li>\u6dfb\u52a0\u66f4\u591a\u7b26\u53f7\u5b57\u7b26</li></ul>
 Confirm_DeleteUser=\u662f\u5426\u786e\u5b9e\u8981\u7ee7\u7eed\uff1f\u5982\u679c\u7ee7\u7eed\uff0c\u7cfb\u7edf\u5c06\u6c38\u4e45\u5220\u9664\u9009\u5b9a\u7528\u6237\u3002\u6b64\u64cd\u4f5c\u65e0\u6cd5\u64a4\u6d88\u3002
 Confirm=\u662f\u5426\u786e\u5b9e\u8981\u7ee7\u7eed\uff1f
 Value_False=\u5047
