--- a/src/main/resources/password/pwm/i18n/Message_de.properties
+++ b/src/main/resources/password/pwm/i18n/Message_de.properties
@@ -94,7 +94,7 @@ Requirement_MinNumericPlural=Muss mindestens %1% Zahlen enthalten.
 Requirement_MinSpecial=Muss mindestens %1% Symbolzeichen (nicht alphanumerisches Zeichen) enthalten.
 Requirement_MinSpecialPlural=Muss mindestens %1% Symbolzeichen (nicht alphanumerische Zeichen) enthalten.
 Requirement_MinUnique=Muss mindestens %1% eindeutiges Zeichen enthalten.
-Requirement_MinUniquePlural=Muss mindestens %1% eindeutige Zeichen enthalten.
+Requirement_MinUniquePlural=Muss mindestens %1% Zeichen enthalten, die nur 1 Mal vorkommen.
 Requirement_MinUpper=Muss mindestens %1% Gro\u00dfbuchstaben enthalten.
 Requirement_MinUpperPlural=Muss mindestens %1% Gro\u00dfbuchstaben enthalten.
 Requirement_NotCaseSensitive=Die Gro\u00df- und Kleinschreibung des Passworts muss nicht beachtet werden.
