--- a/src/main/resources/password/pwm/i18n/Message_nl.properties
+++ b/src/main/resources/password/pwm/i18n/Message_nl.properties
@@ -56,7 +56,7 @@ Eventlog_SetupOtpSecret=OTP-geheim instellen
 EventLog_UpdateProfile=Attributen bijwerken
 EventLog_DeleteAccount=Account verwijderen
 Requirement_ADComplexity=Moet minimaal drie typen tekens (naar keuze) bevatten: <ul><li>hoofdletters (A-Z)</li><li>kleine letters (a-z)</li><li>cijfers (0-9)</li><li>speciale tekens (!, #, $, enzovoort)</li></ul>
-Requirement_ADComplexity2008=Moet minimaal %1% typen tekens (naar keuze) bevatten: <ul><li>hoofdletters (A-Z)</li><li>kleine letters (a-z)</li><li>cijfers (0-9)</li><li>speciale tekens (!, #, $, enzovoort)</li><li>Tekens van andere talen worden hierboven niet weergegeven</li></ul>
+Requirement_ADComplexity2008=Moet minimaal %1% typen tekens (naar keuze) bevatten: <ul><li>hoofdletters (A-Z)</li><li>kleine letters (a-z)</li><li>cijfers (0-9)</li><li>speciale tekens (!, #, $, enzovoort)</li><li>Tekens van andere talen die hierboven niet worden weergegeven</li></ul>
 Requirement_AllowNumeric=Mag geen enkel numeriek teken bevatten.
 Requirement_AllowSpecial=Mag alleen bestaan uit letters en/of cijfers.
 Requirement_CaseSensitive=Het wachtwoord is hoofdlettergevoelig.
