--- a/src/main/resources/password/pwm/i18n/Display_da.properties
+++ b/src/main/resources/password/pwm/i18n/Display_da.properties
@@ -1,4 +1,3 @@
-#Tue, 20 Jun 2017 12:52:39 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -78,6 +77,7 @@ Display_ChangePasswordForm=Angiv f\u00f8lgende data. Dette er p\u00e5kr\u00e6vet
 Display_CheckingData=Kontrollerer data ...
 Display_CheckingPassword=Kontrollerer adgangskode ...
 Display_CheckingResponses=Kontrollerer svar ...
+Display_ClientDisconnect=Kunne ikke kommunikere med serveren.
 Display_CommunicationError=Kunne ikke kommunikere med serveren. Forts\u00e6t, n\u00e5r du er klar.
 Display_ConfirmResponses=S\u00f8rg for, at dine sp\u00f8rgsm\u00e5l og svar er korrekte. Kontroll\u00e9r stavem\u00e5de og tegns\u00e6tning. Hvis du ikke kan huske din adgangskode, kan du f\u00e5 adgang til din konto, hvis du besvarer disse sikkerhedssp\u00f8rgsm\u00e5l.
 Display_Day=dag
@@ -132,7 +132,7 @@ Display_PleaseWait=Indl\u00e6ser ...
 Display_PleaseWaitNewUser=Din nye konto konfigureres. Denne proces kan tage et par minutter. Vent et \u00f8jeblik.
 Display_PleaseWaitPassword=Din adgangskode \u00e6ndres. Denne proces kan tage et par minutter. Vent et \u00f8jeblik.
 Display_Random=Tilf\u00e6ldig
-Display_RecoverVerificationChoice=V\u00e6lg en af f\u00f8lgende metoder for at bekr\u00e6fte din identitet. Bem\u00e6rk! Hvis din administrator kr\u00e6ver flere former for bekr\u00e6ftelse, omdirigeres du til denne side, indtil alle bekr\u00e6ftelseskriterier er opfyldt.
+Display_RecoverVerificationChoice=V\u00e6lg en af f\u00f8lgende metoder til at bekr\u00e6fte din identitet. Bem\u00e6rk\: Hvis din administrator kr\u00e6ver flere former for bekr\u00e6ftelse, omdirigeres du til denne side, indtil alle bekr\u00e6ftelseskriterier er opfyldt.
 Display_RecoverTokenSendChoices=Der sendes en sikkerhedskode til dig for at bekr\u00e6fte din identitet. V\u00e6lg, hvilken metode du foretr\u00e6kker at modtage sikkerhedskoden med.
 Display_RecoverTokenSendChoiceEmail=Send koden til din registrerede e-mailadresse.
 Display_RecoverTokenSendChoiceSMS=Send koden til din mobiltelefon via sms.
@@ -150,7 +150,7 @@ Display_ResponsesPrompt=Skriv dine sikkerhedssvar
 Display_SelectionIndicator=V\u00e6lg et sp\u00f8rgsm\u00e5l p\u00e5 listen
 Display_SearchCompleted=S\u00f8gningen er gennemf\u00f8rt.
 Display_SearchResultsInfo=Returnerede %1% resultater p\u00e5 %2%.
-Display_SearchResultsExceeded=S\u00f8geresultaterne overskred maksimumst\u00f8rrelsen for s\u00f8gninger
+Display_SearchResultsExceeded=S\u00f8geresultaterne overskrider maksimumst\u00f8rrelsen for s\u00f8gninger
 Display_SetRandomPasswordPrompt=Vil du angive en ny tilf\u00e6ldig adgangskode for denne bruger?
 Display_SearchResultsNone=Ingen resultater
 Display_Second=sekund
@@ -170,7 +170,7 @@ Display_TokenDestination=Tokendestination
 Display_TokenResend=Du b\u00f8r modtage din sikkerhedskode med det samme. Hvis du har ventet et stykket id og endnu ikke har modtaget koden, skal du klikke p\u00e5 knappen Send igen for at f\u00e5 tilsendt en ny kode.
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
-Display_WarnExistingOtpSecretTime=Du har allerede tilmeldt din enhed p\u00e5 <span class\="timestamp">%1%</span>. Du kan teste din aktuelle enhed ved at skrive den genererede kode herunder. Hvis du forts\u00e6tter, kan du konfigurere din aktuelle enhed igen.
+Display_WarnExistingOtpSecretTime=Du har allerede tilmeldt din enhed <span class="timestamp">%1%</span>. Du kan teste din aktuelle enhed ved at skrive den genererede kode herunder. Hvis du forts\u00e6tter, kan du konfigurere din aktuelle enhed igen.
 Display_WarnExistingOtpSecret=Du har allerede tilmeldt din enhed. Du kan teste din aktuelle enhed ved at skrive den genererede kode herunder. Hvis du forts\u00e6tter, kan du konfigurere din aktuelle enhed igen.
 Display_WarnExistingResponseTime=Du har allerede angivet dine verificeringssvar p\u00e5 <span class\="timestamp">%1%</span>. Hvis du forts\u00e6tter, kan du svare p\u00e5 sp\u00f8rgsm\u00e5lene igen.
 Display_WarnExistingResponse=Du har allerede angivet dine verificeringssvar. Hvis du forts\u00e6tter, kan du svare p\u00e5 sp\u00f8rgsm\u00e5lene igen.
@@ -320,7 +320,7 @@ Title_DeleteAccount=Slet min konto
 Title_Management=Administration
 Title_DirectReports=Direkte rapporter
 Title_Organization=Organisation
-Tooltip_PasswordStrength=M\u00e5leren for adgangskodestyrken viser, hvor let det er at g\u00e6tte din adgangskode. Pr\u00f8v f\u00f8lgende for at g\u00f8re din adgangskode st\u00e6rkere\:<ul><li>G\u00f8r adgangskoden l\u00e6ngere</li><li>Gentag ikke bogstaver eller tal</li><li>Brug en blanding af store og sm\u00e5 bogstaver</li><li>Tilf\u00f8j flere tal</li><li>Tilf\u00f8j et eller flere symboler</li></ul>
+Tooltip_PasswordStrength=Adgangskodens styrke viser, hvor let det er at g\u00e6tte adgangskoden. Pr\u00f8v f\u00f8lgende for at g\u00f8re din adgangskode st\u00e6rkere\:<ul><li>G\u00f8r adgangskoden l\u00e6ngere</li><li>Undlad at gentage bogstaver eller tal</li><li>Brug blandede bogstaver (sm\u00e5 og store)</li><li>Tilf\u00f8j flere tal</li><li>Tilf\u00f8j flere symboler</li></ul>
 Confirm_DeleteUser=Er du sikker p\u00e5, at du vil forts\u00e6tte? Hvis du forts\u00e6tter, bliver den valgte bruger slettet permanent. Dette kan ikke fortrydes.
 Confirm=Er du sikker p\u00e5, at du vil forts\u00e6tte?
 Value_False=Falsk
