--- a/src/main/resources/password/pwm/i18n/Display_en_CA.properties
+++ b/src/main/resources/password/pwm/i18n/Display_en_CA.properties
@@ -1,4 +1,3 @@
-#Tue, 20 Jun 2017 12:52:39 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -78,6 +77,7 @@ Display_ChangePasswordForm=Please enter the following data. This is required to 
 Display_CheckingData=Checking Data....
 Display_CheckingPassword=Checking Password....
 Display_CheckingResponses=Checking Answers....
+Display_ClientDisconnect=Unable to communicate with server.
 Display_CommunicationError=Unable to communicate with server. Continue when ready.
 Display_ConfirmResponses=Be sure your answers and questions are correct. Check the spelling and punctuation. If you are unable to remember your password, you will be able to access your account by supplying the answers to these security questions.
 Display_Day=day
@@ -150,9 +150,9 @@ Display_ResponsesPrompt=Please type your security answers
 Display_SelectionIndicator=Please select a question from the list
 Display_SearchCompleted=Search completed.
 Display_SearchResultsInfo=Returned %1% results in %2%.
-Display_SearchResultsExceeded=Search results exceeded maximum search size.
+Display_SearchResultsExceeded=Search results exceeded maximum search size
 Display_SetRandomPasswordPrompt=Set a new random password for this user?
-Display_SearchResultsNone=No results.
+Display_SearchResultsNone=No results
 Display_Second=second
 Display_Seconds=seconds
 Display_SetupHelpdeskResponses=<p>Your administrator requires you to supply the following answers. These answers are used to verify your identity in the event that you contact your Help Desk for assistance.</p>
@@ -170,7 +170,7 @@ Display_TokenDestination=Token Destination
 Display_TokenResend=Your security code should arrive right away. If you have waited for a while and haven't yet received a code, click the Resend Code button to receive a new code.
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
-Display_WarnExistingOtpSecretTime=You have already enrolled your device on <span class\="timestamp">%1%</span>. You can test your current device by typing in the generated code below. If you continue, you can reconfigure your current device.
+Display_WarnExistingOtpSecretTime=You have already enrolled your device on <span class="timestamp">%1%</span>. You can test your current device by typing in the generated code below. If you continue, you can re-configure your current device.
 Display_WarnExistingOtpSecret=You have already enrolled your device. You can test your current device by typing in the generated code below. If you continue, you can reconfigure your current device.
 Display_WarnExistingResponseTime=You have already set up your challenge/response answers on <span class\="timestamp">%1%</span>. If you continue, you can answer your questions again.
 Display_WarnExistingResponse=You have already set up your challenge/response answers. If you continue, you can answer your questions again.
@@ -320,7 +320,7 @@ Title_DeleteAccount=Delete My Account
 Title_Management=Management
 Title_DirectReports=Direct Reports
 Title_Organization=Organization
-Tooltip_PasswordStrength=The password strength meter shows how easy it is to guess your password. Try the following to make your password stronger\:<ul><li>Make the password longer</li><li>Do not repeat letters or numbers</li><li>Use mixed-case letters (upper and lower case)</li><li>Add more numbers</li><li>Add more symbol characters</li></ul>
+Tooltip_PasswordStrength=The password strength meter shows how easy it is to guess your password. Try the following to make your password stronger\:<ul><li>Make the password longer</li><li>Do not repeat letters or numbers</li><li>Use mixed (upper- and lower- case) letters</li><li>Add more numbers</li><li>Add more symbol characters</li></ul>
 Confirm_DeleteUser=Are you sure you wish to proceed? If you continue, the selected user will be deleted permanently. This cannot be undone.
 Confirm=Are you sure you wish to proceed?
 Value_False=False
