--- a/src/main/resources/password/pwm/i18n/Display_es.properties
+++ b/src/main/resources/password/pwm/i18n/Display_es.properties
@@ -1,4 +1,3 @@
-#Tue, 20 Jun 2017 12:52:39 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -78,6 +77,7 @@ Display_ChangePasswordForm=Introduzca los siguientes datos. Esto es necesario pa
 Display_CheckingData=Comprobando datos...
 Display_CheckingPassword=Comprobando contrase\u00f1a...
 Display_CheckingResponses=Comprobando respuestas...
+Display_ClientDisconnect=No es posible la comunicaci\u00f3n con el servidor.
 Display_CommunicationError=No es posible la comunicaci\u00f3n con el servidor. Contin\u00fae cuando est\u00e9 preparado.
 Display_ConfirmResponses=Aseg\u00farese de que sus preguntas y respuestas sean correctas, Compruebe la ortograf\u00eda y la puntuaci\u00f3n. Si no recuerda su contrase\u00f1a, podr\u00e1 acceder a su cuenta introduciendo las respuestas a estas preguntas de seguridad.
 Display_Day=d\u00eda
@@ -92,7 +92,7 @@ Display_ForgottenUsername=Introduzca la siguiente informaci\u00f3n. Esta informa
 Display_GuestRegistration=Para registrar una nueva cuenta de usuario guest, introduzca la siguiente informaci\u00f3n.
 Display_GuestUpdate=Para actualizar una cuenta de usuario guest, compruebe y modifique la siguiente informaci\u00f3n.
 Display_Helpdesk=Introduzca los datos de b\u00fasqueda del usuario.
-Display_HelpdeskOtpValidation=Indique al usuario que cargue su aplicaci\u00f3n de autenticaci\u00f3n m\u00f3vil y comparta la contrase\u00f1a actual.
+Display_HelpdeskOtpValidation=Indique al usuario que cargue su aplicaci\u00f3n de autenticaci\u00f3n m\u00f3vil y comparta el c\u00f3digo de seguridad actual.
 Display_Hour=hora
 Display_Hours=horas
 Display_IdleTimeout=Tiempo l\u00edmite de inactividad\:
@@ -122,8 +122,8 @@ Display_PasswordExpired=Su contrase\u00f1a ha caducado. Debe establecer una nuev
 Display_PasswordGeneration=Las siguientes contrase\u00f1as se han generado de forma aleatoria. Estas contrase\u00f1as se basan en palabras reales para que sea m\u00e1s f\u00e1cil recordarlas, pero se han modificado para que resulte dif\u00edcil adivinarlas.
 Display_PasswordNoExpire=Su contrase\u00f1a no tiene caducidad.
 Display_PasswordPrompt=Introduzca la nueva contrase\u00f1a
-Display_PasswordStrengthHigh=Seguridad\: <b>Fuerte</b>
-Display_PasswordStrengthLow=Seguridad\: <b>D\u00e9bil</b>
+Display_PasswordStrengthHigh=Seguridad\: <b>Alta</b>
+Display_PasswordStrengthLow=Seguridad\: <b>Baja</b>
 Display_PasswordStrengthMedium=Seguridad\: <b>Buena</b>
 Display_PasswordReplicationStatus=R\u00e9plica de contrase\u00f1a (progreso %1%)
 Display_PasswordWarn=<b>Su contrase\u00f1a caducar\u00e1 dentro de poco</b>. Cambie la contrase\u00f1a en breve para evitar problemas de acceso a este servicio. <br/><br/>Su contrase\u00f1a caducar\u00e1 el %1%.
@@ -132,7 +132,7 @@ Display_PleaseWait=Cargando...
 Display_PleaseWaitNewUser=Se est\u00e1 configurando su nueva cuenta. Este proceso puede tardar varios minutos; le rogamos tenga paciencia.
 Display_PleaseWaitPassword=Se est\u00e1 cambiando su contrase\u00f1a. Este proceso puede tardar varios minutos; le rogamos tenga paciencia.
 Display_Random=Aleatoria
-Display_RecoverVerificationChoice=Seleccione uno de los siguientes m\u00e9todos para verificar su identidad. Nota\: Si el administrador requiere varias formas de verificaci\u00f3n, se le dirigir\u00e1 de nuevo a esta p\u00e1gina hasta que se hayan cumplido todos los criterios de verificaci\u00f3n.
+Display_RecoverVerificationChoice=Seleccione uno de los siguientes m\u00e9todos para verificar su identidad. Nota\: Si el administrador requiere varias formas de verificaci\u00f3n, regresar\u00e1 a esta p\u00e1gina hasta que se hayan satisfecho  todos los criterios de verificaci\u00f3n.
 Display_RecoverTokenSendChoices=Se le enviar\u00e1 un c\u00f3digo de seguridad para verificar su identidad. Elija el m\u00e9todo por el que prefiere recibir su c\u00f3digo de seguridad.
 Display_RecoverTokenSendChoiceEmail=Enviar el c\u00f3digo a su direcci\u00f3n de correo electr\u00f3nico registrada.
 Display_RecoverTokenSendChoiceSMS=Enviar el c\u00f3digo a su tel\u00e9fono m\u00f3vil mediante mensaje de texto (SMS).
@@ -150,9 +150,9 @@ Display_ResponsesPrompt=Introduzca sus respuestas de seguridad
 Display_SelectionIndicator=Seleccione una pregunta de la lista
 Display_SearchCompleted=B\u00fasqueda finalizada.
 Display_SearchResultsInfo=Se han obtenido %1% resultados en %2%.
-Display_SearchResultsExceeded=Los resultados de b\u00fasqueda superan el tama\u00f1o m\u00e1ximo de b\u00fasqueda
+Display_SearchResultsExceeded=Los resultados de b\u00fasqueda exceden el tama\u00f1o m\u00e1ximo de b\u00fasqueda permitido
 Display_SetRandomPasswordPrompt=\u00bfDesea establecer una nueva contrase\u00f1a aleatoria para este usuario?
-Display_SearchResultsNone=No se encontraron resultados
+Display_SearchResultsNone=No hay resultados
 Display_Second=segundo
 Display_Seconds=segundos
 Display_SetupHelpdeskResponses=<p>Su administrador requiere que proporcione las siguientes respuestas. Estas respuestas se utilizan para verificar su identidad en caso de que se comunique con el servicio de ayuda t\u00e9cnica para obtener asistencia.</p>
@@ -170,9 +170,9 @@ Display_TokenDestination=Destino del testigo
 Display_TokenResend=Su c\u00f3digo de seguridad debe llegar inmediatamente. Si lleva esperando un rato y a\u00fan no ha recibido un c\u00f3digo, haga clic en el bot\u00f3n Volver a enviar c\u00f3digo para recibir un c\u00f3digo nuevo.
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
-Display_WarnExistingOtpSecretTime=Ya ha inscrito su dispositivo en <span class\="timestamp">%1%</span>. Puede probar su dispositivo actual introduciendo el c\u00f3digo generado a continuaci\u00f3n. Si contin\u00faa, puede volver a configurar su dispositivo actual.
+Display_WarnExistingOtpSecretTime=Ha inscrito su dispositivo el <span class="timestamp">%1%</span>. Puede probar el dispositivo actual introduciendo a continuaci\u00f3n el c\u00f3digo generado. Si contin\u00faa, puede volver a configurar el dispositivo actual.
 Display_WarnExistingOtpSecret=Ya ha inscrito su dispositivo. Puede probar su dispositivo actual introduciendo el c\u00f3digo generado a continuaci\u00f3n. Si contin\u00faa, puede volver a configurar su dispositivo actual.
-Display_WarnExistingResponseTime=Ya ha configurado su pregunta desaf\u00edo y sus respuestas en <span class\="timestamp">%1%</span>. Si contin\u00faa, podr\u00e1 volver a contestar sus preguntas.
+Display_WarnExistingResponseTime=Ya ha configurado sus respuestas a preguntas de seguridad el <span class\="timestamp">%1%</span>. Si contin\u00faa, podr\u00e1 volver a contestar sus preguntas.
 Display_WarnExistingResponse=Ya ha configurado su pregunta desaf\u00edo/respuestas. Si contin\u00faa, podr\u00e1 volver a contestar sus preguntas.
 Display_PleaseVerifyOtp=Introduzca el c\u00f3digo de verificaci\u00f3n de 6 d\u00edgitos del dispositivo. Si su dispositivo no est\u00e1 configurado para ofrecerle un c\u00f3digo de verificaci\u00f3n, regrese a la p\u00e1gina anterior y configure el dispositivo.
 Display_OtpRecoveryInfo=Cada uno de estos c\u00f3digos de recuperaci\u00f3n puede utilizarse exactamente una vez en caso de que no pueda acceder a su tel\u00e9fono. Aseg\u00farese de <a class\="pwm-link-print">imprimir esta p\u00e1gina</a> o anote estos c\u00f3digos y gu\u00e1rdelos en un lugar seguro.
@@ -202,18 +202,18 @@ Field_LastLoginTime=Hora de \u00faltima entrada
 Field_LastLoginTimeDelta=Diferencia horaria de \u00faltima entrada
 Field_LdapProfile=Perfil de LDAP
 Field_Location=Ubicaci\u00f3n
-Field_LogoutURL=URL para salir
+Field_LogoutURL=URL para salir de la sesi\u00f3n
 Field_Method=M\u00e9todo
 Field_NetworkAddress=Direcci\u00f3n de red
 Field_NetworkHost=Host de red
 Field_NewPassword=Contrase\u00f1a nueva
 Field_Option_Select=Seleccione una pregunta
 Field_Password=Contrase\u00f1a
-Field_PasswordExpirationTime=Hora de caducidad de la contrase\u00f1a
+Field_PasswordExpirationTime=Fecha/hora de caducidad de la contrase\u00f1a
 Field_PasswordExpired=Contrase\u00f1a caducada
 Field_PasswordLocked=Contrase\u00f1a bloqueada (detecci\u00f3n de intruso)
 Field_PasswordPreExpired=Contrase\u00f1a a punto de caducar
-Field_PasswordSetTime=Tiempo de establecimiento de la contrase\u00f1a
+Field_PasswordSetTime=Fecha/hora de establecimiento de la contrase\u00f1a
 Field_PasswordSetTimeDelta=Diferencia horaria de establecimiento de contrase\u00f1a
 Field_PasswordViolatesPolicy=Infringe la directiva de contrase\u00f1as
 Field_PasswordWithinWarningPeriod=Dentro del per\u00edodo de advertencia
@@ -233,7 +233,7 @@ Field_OTP_Secret=Secreto
 Field_OTP_Type=Tipo
 Field_OTP_RecoveryCodes=C\u00f3digos de recuperaci\u00f3n
 Field_OTP_Stored=OTP almacenada
-Field_OTP_Timestamp=Hora de almacenamiento de OTP
+Field_OTP_Timestamp=Fecha/hora de almacenamiento de OTP
 Field_VerificationMethodPreviousAuth=Autenticaci\u00f3n anterior
 Field_VerificationMethodToken=Verificaci\u00f3n por SMS/correo electr\u00f3nico
 Field_VerificationMethodOTP=Verificaci\u00f3n de dispositivo m\u00f3vil
@@ -305,14 +305,14 @@ Title_SecurityResponses=Respuestas de seguridad
 Title_SetupRandomResponses=Preguntas aleatorias
 Title_SetupRequiredResponses=Preguntas obligatorias
 Title_SetupResponses=Configurar preguntas de seguridad
-Title_SetupOtpSecret=Configurar autenticaci\u00f3n de aplicaciones m\u00f3viles
+Title_SetupOtpSecret=Configurar autenticaci\u00f3n con aplicaci\u00f3n m\u00f3vil
 Title_Shortcuts=Accesos directos
 Title_Status=Estado
 Title_Success=Correcto
 Title_UpdateProfile=Actualizar perfil
 Title_UpdateProfileConfirm=Confirmar datos del perfil
 Title_UserData=Mis datos
-Title_UserEventHistory=Historial de contrase\u00f1a
+Title_UserEventHistory=Historial de contrase\u00f1as
 Title_UserInformation=Mi cuenta
 Title_ValidateCode=Validar c\u00f3digo
 Title_VerificationSend=Seleccionar m\u00e9todo de verificaci\u00f3n
@@ -320,7 +320,7 @@ Title_DeleteAccount=Suprimir mi cuenta
 Title_Management=Gesti\u00f3n
 Title_DirectReports=Informes directos
 Title_Organization=Organizaci\u00f3n
-Tooltip_PasswordStrength=El medidor de seguridad de la contrase\u00f1a muestra lo f\u00e1cil que es adivinar su contrase\u00f1a. Pruebe lo siguiente para aumentar su seguridad\:<ul><li>Configure una contrase\u00f1a m\u00e1s larga.</li><li>No repita letras ni n\u00fameros.</li><li>Mezcle letras en may\u00fascula y min\u00fascula.</li><li>A\u00f1ada m\u00e1s n\u00fameros.</li><li>A\u00f1ada m\u00e1s caracteres de s\u00edmbolo.</li></ul>
+Tooltip_PasswordStrength=El medidor de nivel de seguridad de la contrase\u00f1a muestra lo f\u00e1cil que es averiguar su contrase\u00f1a. Pruebe las siguientes sugerencias para hacer su contrase\u00f1a m\u00e1s segura\:<ul><li>A\u00f1ada m\u00e1s caracteres a la contrase\u00f1a</li><li>No repita letras ni n\u00fameros</li><li>Use tanto letras en may\u00fascula como en min\u00fascula</li><li>A\u00f1ada m\u00e1s n\u00fameros</li><li>A\u00f1ada m\u00e1s caracteres de s\u00edmbolos</li></ul>
 Confirm_DeleteUser=\u00bfSeguro que desea continuar? Si contin\u00faa, el usuario seleccionado se suprimir\u00e1 de forma permanente. Esta acci\u00f3n no se puede deshacer.
 Confirm=\u00bfSeguro que desea continuar?
 Value_False=Falso
