--- a/src/main/resources/password/pwm/i18n/Display_fr_CA.properties
+++ b/src/main/resources/password/pwm/i18n/Display_fr_CA.properties
@@ -1,4 +1,3 @@
-#Tue, 20 Jun 2017 12:52:39 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -78,6 +77,7 @@ Display_ChangePasswordForm=Entrez les donn\u00e9es suivantes. Elles serviront \u
 Display_CheckingData=V\u00e9rification des donn\u00e9es...
 Display_CheckingPassword=V\u00e9rification du mot de passe...
 Display_CheckingResponses=V\u00e9rification des r\u00e9ponses...
+Display_ClientDisconnect=Impossible de communiquer avec le serveur.
 Display_CommunicationError=Communication avec le serveur impossible. Continuez lorsque vous \u00eates pr\u00eat.
 Display_ConfirmResponses=Veillez \u00e0 ce que vos questions et r\u00e9ponses soient correctes. V\u00e9rifiez l'orthographe et la ponctuation. Si vous oubliez votre mot de passe, vous pourrez acc\u00e9der \u00e0 votre compte en r\u00e9pondant \u00e0 ces questions de s\u00e9curit\u00e9.
 Display_Day=jour
@@ -95,7 +95,7 @@ Display_Helpdesk=Entrez les donn\u00e9es de recherche de l'utilisateur.
 Display_HelpdeskOtpValidation=Demandez \u00e0 l'utilisateur de charger son application d'authentification mobile et de partager le code secret actuel.
 Display_Hour=heure
 Display_Hours=heures
-Display_IdleTimeout=D\u00e9lai d'inactivit\u00e9\:
+Display_IdleTimeout=D\u00e9lai d'inactivit\u00e9\u00a0\:
 Display_IdleWarningMessage=Votre session est sur le point d'expirer. Cliquez n'importe o\u00f9 sur cette page pour qu'elle reste active.
 Display_IdleWarningTitle=D\u00e9lai d'inactivit\u00e9
 Display_JavascriptRequired=Javascript est requis pour afficher cette page.
@@ -132,7 +132,7 @@ Display_PleaseWait=Chargement...
 Display_PleaseWaitNewUser=Votre nouveau compte est en cours de configuration. Ce processus peut prendre quelques minutes, veuillez patienter.
 Display_PleaseWaitPassword=Votre mot de passe est en cours d'\u00e9dition. Ce processus peut prendre quelques minutes, veuillez patienter.
 Display_Random=Al\u00e9atoire
-Display_RecoverVerificationChoice=S\u00e9lectionnez l'une des m\u00e9thodes suivantes pour v\u00e9rifier votre identit\u00e9. Remarque \: si votre administrateur exige plusieurs formes de v\u00e9rification, vous serez redirig\u00e9 vers cette page jusqu'\u00e0 ce que tous les crit\u00e8res de v\u00e9rification soient remplis.
+Display_RecoverVerificationChoice=Veuillez s\u00e9lectionner une des m\u00e9thodes suivantes pour v\u00e9rifier votre identit\u00e9.  Note\u00a0\: Si votre administrateur exige plusieurs formes de v\u00e9rification, vous serez redirig\u00e9 vers cette page jusqu'\u00e0 ce que tous les crit\u00e8res soient remplis.
 Display_RecoverTokenSendChoices=Un code de s\u00e9curit\u00e9 vous sera envoy\u00e9 pour v\u00e9rifier votre identit\u00e9. Choisissez la m\u00e9thode qui vous convient le mieux pour recevoir votre code de s\u00e9curit\u00e9.
 Display_RecoverTokenSendChoiceEmail=Envoyer le code \u00e0 votre adresse \u00e9lectronique enregistr\u00e9e.
 Display_RecoverTokenSendChoiceSMS=Envoyer le code par messagerie texte (SMS) sur votre t\u00e9l\u00e9phone mobile.
@@ -150,9 +150,9 @@ Display_ResponsesPrompt=Veuillez entrer vos r\u00e9ponses de s\u00e9curit\u00e9
 Display_SelectionIndicator=S\u00e9lectionnez un \u00e9l\u00e9ment de question dans la liste
 Display_SearchCompleted=Recherche effectu\u00e9e.
 Display_SearchResultsInfo=%1% r\u00e9sultats renvoy\u00e9s dans %2%.
-Display_SearchResultsExceeded=Les r\u00e9sultats de la recherche d\u00e9passent la taille maximale de la recherche.
+Display_SearchResultsExceeded=Les r\u00e9sultats de recherche d\u00e9passaient la taille de recherche maximale
 Display_SetRandomPasswordPrompt=Voulez-vous d\u00e9finir un nouveau mot de passe al\u00e9atoire pour cet utilisateur?
-Display_SearchResultsNone=Aucun r\u00e9sultat.
+Display_SearchResultsNone=Aucun r\u00e9sultat
 Display_Second=seconde
 Display_Seconds=secondes
 Display_SetupHelpdeskResponses=<p>Votre administrateur exige que vous indiquiez les r\u00e9ponses suivantes. Elles permettent de v\u00e9rifier votre identit\u00e9 si vous devez vous adresser au service d'assistance pour obtenir de l'aide.</p>
@@ -170,7 +170,7 @@ Display_TokenDestination=Destination du jeton
 Display_TokenResend=Vous devriez recevoir imm\u00e9diatement votre code de s\u00e9curit\u00e9. Si vous attendez depuis un moment et n'avez rien re\u00e7u, cliquez sur le bouton Renvoyer un code pour recevoir un nouveau code.
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
-Display_WarnExistingOtpSecretTime=Vous avez d\u00e9j\u00e0 inscrit votre p\u00e9riph\u00e9rique le <span class\="timestamp">%1%</span>. Vous pouvez tester votre p\u00e9riph\u00e9rique actuel en tapant le code g\u00e9n\u00e9r\u00e9 ci-dessous. Si vous continuez, vous pouvez reconfigurer votre p\u00e9riph\u00e9rique actuel.
+Display_WarnExistingOtpSecretTime=Vous avez d\u00e9j\u00e0 inscrit votre p\u00e9riph\u00e9rique sur <span class="timestamp">%1%</span>.  Vous pouvez tester votre p\u00e9riph\u00e9rique en tapant le code g\u00e9n\u00e9r\u00e9 ci-dessous.  Si vous continuez, vous pouvez reconfigurer votre p\u00e9riph\u00e9rique actuel.
 Display_WarnExistingOtpSecret=Vous avez d\u00e9j\u00e0 inscrit votre p\u00e9riph\u00e9rique. Vous pouvez tester votre p\u00e9riph\u00e9rique actuel en tapant le code g\u00e9n\u00e9r\u00e9 ci-dessous. Si vous continuez, vous pouvez reconfigurer votre p\u00e9riph\u00e9rique actuel.
 Display_WarnExistingResponseTime=Vous avez d\u00e9j\u00e0 configur\u00e9 vos questions et r\u00e9ponses de v\u00e9rification d'identit\u00e9 le  <span class\="timestamp">%1%</span>. Si vous continuez, vous pouvez de nouveau r\u00e9pondre \u00e0 vos questions.
 Display_WarnExistingResponse=Vous avez d\u00e9j\u00e0 configur\u00e9 vos questions et r\u00e9ponses de v\u00e9rification d'identit\u00e9. Si vous continuez, vous pouvez de nouveau r\u00e9pondre \u00e0 vos questions.
@@ -274,7 +274,6 @@ Long_Title_VerificationSend=Avant de pouvoir s\u00e9lectionner cet utilisateur, 
 Title_AnsweredQuestions=Questions auxquelles vous avez r\u00e9pondu
 Title_ActivateUser=Activer le compte
 Title_Admin=Administration
-Title_Application=R\u00e9initialisation du libre-service de mot de passe
 Title_Captcha=V\u00e9rification
 Title_ChangePassword=\u00c9diter le mot de passe
 Title_ConfirmResponses=Confirmer les questions de s\u00e9curit\u00e9
@@ -310,8 +309,6 @@ Title_SetupOtpSecret=Configurer l'authentification de l'application mobile
 Title_Shortcuts=Raccourcis
 Title_Status=\u00c9tat
 Title_Success=R\u00e9ussite
-Title_TitleBarAuthenticated=@User\:ID@ Libre-service de mot de passe
-Title_TitleBar=Libre-service de mot de passe
 Title_UpdateProfile=Mettre \u00e0 jour le profil
 Title_UpdateProfileConfirm=Confirmer les donn\u00e9es du profil
 Title_UserData=Mes donn\u00e9es
@@ -323,7 +320,7 @@ Title_DeleteAccount=Supprimer mon compte
 Title_Management=Gestion
 Title_DirectReports=Subordonn\u00e9s directs
 Title_Organization=Organisation
-Tooltip_PasswordStrength=L'\u00e9valuation de la force du mot de passe indique la facilit\u00e9 avec laquelle votre mot de passe peut \u00eatre devin\u00e9. Essayez les astuces suivantes pour renforcer votre mot de passe\:<ul><li>Rallongez votre mot de passe</li><li>Ne r\u00e9p\u00e9tez pas les m\u00eames lettres ou chiffres.</li><li>Combinez des majuscules et des minuscules.</li><li>Ajoutez plus de chiffres.</li><li>Ajoutez plus de symboles.</li></ul>
+Tooltip_PasswordStrength=L'indicateur de fiabilit\u00e9 de mot de passe signale \u00e0 quel point il est facile de deviner votre mot de passe. Essayez ce qui suit pour renforcer votre mot de passe\u00a0\:<ul><li>Allongez votre mot de passe</li><li>Ne r\u00e9p\u00e9tez pas les lettres ni les chiffres</li><li>Utilisez des lettres majuscules et minuscules</li><li>Ajoutez des chiffres</li><li>Ajoutez des caract\u00e8res symboliques</li></ul>
 Confirm_DeleteUser=Voulez-vous vraiment continuer?  Si vous poursuivez, l'utilisateur s\u00e9lectionn\u00e9 sera d\u00e9finitivement supprim\u00e9. Cette op\u00e9ration ne peut pas \u00eatre annul\u00e9e.
 Confirm=Voulez-vous vraiment continuer?
 Value_False=Faux
