--- a/src/main/resources/password/pwm/i18n/Display_nl.properties
+++ b/src/main/resources/password/pwm/i18n/Display_nl.properties
@@ -1,4 +1,3 @@
-#Tue, 20 Jun 2017 12:52:39 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -78,6 +77,8 @@ Display_ChangePasswordForm=Voer de volgende gegevens in. Deze gegevens zijn vere
 Display_CheckingData=Gegevens controleren....
 Display_CheckingPassword=Wachtwoord controleren....
 Display_CheckingResponses=Antwoorden controleren....
+Display_ClientDisconnect=Er is geen verbinding met de server mogelijk.
+
 Display_CommunicationError=Er is geen verbinding met de server mogelijk. Ga verder wanneer u gereed bent.
 Display_ConfirmResponses=Zorg ervoor dat de vragen en antwoorden correct zijn. Controleer de spelling en leestekens. Als u uw wachtwoord bent vergeten, kunt u toegang krijgen tot uw account door de antwoorden op deze beveiligingsvragen op te geven.
 Display_Day=dag
@@ -96,6 +97,7 @@ Display_HelpdeskOtpValidation=Instrueer de gebruiker zijn mobiele verificatie-ap
 Display_Hour=uur
 Display_Hours=uur
 Display_IdleTimeout=Time-out na inactiviteit\:
+
 Display_IdleWarningMessage=Uw sessie staat op het punt een time-out te krijgen. Klik op een willekeurige plaats op deze pagina om de sessie te hervatten.
 Display_IdleWarningTitle=Time-out na inactiviteit
 Display_JavascriptRequired=Javascript is vereist om deze pagina weer te geven.
@@ -132,7 +134,7 @@ Display_PleaseWait=Laden...
 Display_PleaseWaitNewUser=Uw nieuwe account wordt geconfigureerd. Dit proces kan enkele minuten duren. Een ogenblik geduld.
 Display_PleaseWaitPassword=Uw wachtwoord wordt gewijzigd. Dit proces kan enkele minuten duren. Een ogenblik geduld.
 Display_Random=Willekeurig
-Display_RecoverVerificationChoice=Selecteer een van de hierna genoemde methoden om uw identiteit te verifi\u00ebren. Opmerking\: als uw beheerder meerdere vormen van verificatie vereist, wordt u opnieuw naar deze pagina doorgestuurd totdat u aan alle verificatiecriteria hebt voldaan.
+Display_RecoverVerificationChoice=Selecteer een van de volgende methoden om uw identiteit te verifi\u00ebren.  Opmerking\: als uw beheerder meerdere verificatiemethoden vereist, wordt u teruggestuurd naar deze pagina totdat aan alle verificatiecriteria is voldaan.
 Display_RecoverTokenSendChoices=Als u uw identiteit wilt verifi\u00ebren, wordt een beveiligingscode naar u verzonden. Geef aan op welke manier u uw beveiligingscode wilt ontvangen.
 Display_RecoverTokenSendChoiceEmail=Verzend de code naar uw geregistreerde e-mailadres.
 Display_RecoverTokenSendChoiceSMS=Verzend de code naar uw mobiele telefoon met tekstberichten (sms).
@@ -150,9 +152,11 @@ Display_ResponsesPrompt=Typ uw beveilingingsantwoorden
 Display_SelectionIndicator=Selecteer een vraag in de lijst
 Display_SearchCompleted=Zoekopdracht voltooid.
 Display_SearchResultsInfo=%1% resultaten geretourneerd in %2%.
-Display_SearchResultsExceeded=Zoekresultaten hebben maximale grootte voor zoekopdracht overschreden
+Display_SearchResultsExceeded=Zoekresultaten overschrijden de maximale grootte
+
 Display_SetRandomPasswordPrompt=Een nieuw willekeurig wachtwoord instellen voor deze gebruiker?
 Display_SearchResultsNone=Geen resultaten
+
 Display_Second=seconde
 Display_Seconds=seconden
 Display_SetupHelpdeskResponses=<p>Uw beheerder vereist dat u de volgende antwoorden opgeeft. Deze antwoorden worden gebruikt om uw identiteit te verifi\u00ebren in het geval dat u contact opneemt met uw helpdesk voor hulp.</p>
@@ -161,7 +165,7 @@ Display_SetupRequiredResponses=
 Display_SetupResponses=<p>Als u uw wachtwoord bent vergeten, kunt u toegang krijgen tot uw account door uw beveiligingsvragen te beantwoorden.</p><p>Kies uw vragen en antwoorden aan de hand waarvan uw identiteit kan worden geverifieerd als u uw wachtwoord bent vergeten. Omdat u met de antwoorden op deze vragen toegang kunt krijgen tot uw account, moet u antwoorden opgeven die niet gemakkelijk door anderen kunnen worden geraden of ontdekt.</p>
 Display_SetupOtpSecret=Als u uw wachtwoord bent vergeten, kunt u toegang krijgen tot uw account met behulp van uw mobiele apparaat. Volg de onderstaande instructies voor uw apparaattype.
 Display_SetupOtp_Android_Title=Android
-Display_SetupOtp_Android_Steps=<b>Installeer de app Google Authenticator voor Android.</b><ol><li>Ga op uw telefoon naar de Google Play Store.</li><li>Zoek naar <b>Google Authenticator</b>.<br/>(<a target\="playstore" href\="https\://play.google.com/store/apps/details?id\=com.google.android.apps.authenticator2">Download van de Google Play Store</a>)</li><li>Download en installeer de toepassing.</li></ol><b>Open Google Authenticator en en configureer de app vervolgens.</b><ol><li>Raak in Google Authenticator Menu aan en selecteer Account instellen.</li><li>Selecteer Barcode scannen.</li><li>Gebruik de camera van uw telefoon om deze barcode te scannen.</li><li>Zodra u de barcode hebt gescand, klikt u op de knop Doorgaan.</li></ol>
+Display_SetupOtp_Android_Steps=<b>Installeer de app Google Authenticator voor Android.</b><ol><li>Ga op uw telefoon naar de Google Play Store.</li><li>Zoek naar <b>Google Authenticator</b>.<br/>(<a target\="playstore" href\="https\://play.google.com/store/apps/details?id\=com.google.android.apps.authenticator2">Download van de Google Play Store</a>)</li><li>Download en installeer de toepassing.</li></ol><b>Open Google Authenticator en configureer de app vervolgens.</b><ol><li>Raak in Google Authenticator Menu aan en selecteer Account instellen.</li><li>Selecteer Barcode scannen.</li><li>Gebruik de camera van uw telefoon om deze barcode te scannen.</li><li>Zodra u de barcode hebt gescand, klikt u op de knop Doorgaan.</li></ol>
 Display_SetupOtp_iPhone_Title=iPhone
 Display_SetupOtp_iPhone_Steps=<b>Tik op uw iPhone op het pictogram App Store.</b><ol><li>Ga op uw telefoon naar de App Store.</li><li>Zoek naar <b>Google Authenticator</b>.<br/>(<a target\="itunesstore" href\="https\://itunes.apple.com/us/app/google-authenticator/id388497605?mt\=8">Download van de App Store</a>)</li><li>Tik op de app en tik vervolgens op Gratis om het programma te downloaden en te installeren.</li></ol><b>Open en configureer vervolgens Google Authenticator.</b><ol><li>Tik in Google Authenticator op "+" en vervolgens op "Barcode scannen."</li><li>Gebruik de camera van uw telefoon om deze barcode te scannen.</li><li>Zodra u de barcode hebt gescand, klikt u op de knop Doorgaan.</li></ol>
 Display_SetupOtp_Other_Title=Overig
@@ -170,7 +174,7 @@ Display_TokenDestination=Tokenbestemming
 Display_TokenResend=U moet uw beveiligingscode meteen ontvangen. Als u na enige tijd nog geen code hebt ontvangen, klikt u op de knop Opnieuw verzenden om een nieuwe code te ontvangen.
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
-Display_WarnExistingOtpSecretTime=U hebt uw apparaat al ingeschreven op <span class\="timestamp">%1%</span>. U kunt uw huidige apparaat testen door de gegenereerde code hieronder in te voeren. Als u doorgaat, kunt u uw huidige apparaat opnieuw configureren.
+Display_WarnExistingOtpSecretTime=U hebt uw apparaat al ingeschreven op <span class="timestamp">%1%</span>. U kunt uw huidige apparaat testen door de gegenereerde code hieronder te typen. Als u doorgaat, kunt u uw huidige apparaat opnieuw configureren.
 Display_WarnExistingOtpSecret=U hebt uw apparaat al ingeschreven. U kunt uw huidige apparaat testen door de gegenereerde code hieronder te typen. Als u doorgaat, kunt u uw huidige apparaat configureren.
 Display_WarnExistingResponseTime=U hebt uw challenge/response-antwoorden al ingesteld op <span class\="timestamp">%1%</span>. Als u doorgaat, kunt u uw vragen opnieuw beantwoorden.
 Display_WarnExistingResponse=U hebt uw challenge/response-antwoorden al ingesteld. Als u doorgaat, kunt u uw vragen opnieuw beantwoorden.
@@ -278,8 +282,8 @@ Title_Captcha=Verificatie
 Title_ChangePassword=Wachtwoord wijzigen
 Title_ConfirmResponses=Beveiligingsvragen bevestigen
 Title_Error=Fout
-Title_ForgottenPassword=Vergeten wachtwoord
-Title_ForgottenUsername=Vergeten gebruikersnaam
+Title_ForgottenPassword=Wachtwoord vergeten
+Title_ForgottenUsername=Gebruikersnaam vergeten
 Title_GuestRegistration=Gastregistratie
 Title_GuestUpdate=Gastgebruiker bijwerken
 Title_Helpdesk=Helpdesk
@@ -298,7 +302,7 @@ Title_PeopleSearch=Personen zoeken
 Title_PleaseWait=Een ogenblik geduld
 Title_RandomPasswords=Willekeurige wachtwoorden
 Title_RecentVerifications=Recente verificaties
-Title_RecoverPassword=Vergeten wachtwoord
+Title_RecoverPassword=Wachtwoord vergeten
 Title_RecoverRandomResponses=Willekeurige vragen
 Title_RecoverRequiredResponses=Vereiste vragen
 Title_SecurityResponses=Beveiligingsantwoorden
@@ -308,7 +312,7 @@ Title_SetupResponses=Beveiligingsvragen instellen
 Title_SetupOtpSecret=Verificatie mobiele app instellen
 Title_Shortcuts=Snelkoppelingen
 Title_Status=Status
-Title_Success=Succes
+Title_Success=Voltooid
 Title_UpdateProfile=Profiel bijwerken
 Title_UpdateProfileConfirm=Profielgegevens bevestigen
 Title_UserData=Mijn gegevens
@@ -320,7 +324,7 @@ Title_DeleteAccount=Mijn account verwijderen
 Title_Management=Management
 Title_DirectReports=Directe rapporterenden
 Title_Organization=Organisatie
-Tooltip_PasswordStrength=De wachtwoordsterktemeter geeft aan hoe eenvoudig het is om uw wachtwoord te raden. Probeer het volgende om uw wachtwoord sterker te maken\:<ul><li>Maak het wachtwoord langer</li><li>Herhaal de letters en cijfers niet</li><li>Gebruik hoofd- en kleine letters door elkaar</li><li>Voeg cijfers toe</li><li>Voeg speciale tekens toe</li></ul>
+Tooltip_PasswordStrength=De indicator voor wachtwoordsterkte geeft aan hoe gemakkelijk het is uw wachtwoord te raden. Probeer het volgende om uw wachtwoord sterker te maken\:<ul><li>Kies een langer wachtwoord</li><li>Herhaal niet dezelfde letters of cijfers</li><li>Gebruik zowel hoofdletters als kleine letters</li><li>Voeg meer cijfers toe</li><li>Voeg meer symbolen toe</li></ul>
 Confirm_DeleteUser=Weer u zeker dat u wilt doorgaan? Als u doorgaat, wordt de geselecteerde gebruiker definitief verwijderd. Dit kan niet ongedaan worden gemaakt.
 Confirm=Weet u zeker dat u wilt doorgaan?
 Value_False=Onwaar
