--- a/src/main/resources/password/pwm/i18n/Display_pl.properties
+++ b/src/main/resources/password/pwm/i18n/Display_pl.properties
@@ -1,4 +1,3 @@
-#Tue, 20 Jun 2017 12:52:39 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -78,6 +77,7 @@ Display_ChangePasswordForm=Wprowad\u017a nast\u0119puj\u0105ce dane. Jest to wym
 Display_CheckingData=Sprawdzanie danych...
 Display_CheckingPassword=Sprawdzanie has\u0142a...
 Display_CheckingResponses=Sprawdzanie odpowiedzi ....
+Display_ClientDisconnect=Nie mo\u017cna nawi\u0105za\u0107 komunikacji z serwerem.
 Display_CommunicationError=Nie mo\u017cna nawi\u0105za\u0107 komunikacji z serwerem. Kontynuuj, gdy wszystko b\u0119dzie gotowe.
 Display_ConfirmResponses=Upewnij si\u0119, \u017ce odpowiedzi i pytania s\u0105 poprawne. Sprawd\u017a pisowni\u0119 i interpunkcj\u0119. Je\u015bli zapomnisz has\u0142a, dost\u0119p do konta b\u0119dzie mo\u017cliwy przez podanie odpowiedzi na te pytania zabezpieczaj\u0105ce.
 Display_Day=dzie\u0144
@@ -132,7 +132,7 @@ Display_PleaseWait=\u0141adowanie...
 Display_PleaseWaitNewUser=Trwa konfigurowanie nowego konta. Zachowaj cierpliwo\u015b\u0107, ten proces mo\u017ce potrwa\u0107 kilka minut.
 Display_PleaseWaitPassword=Trwa zmienianie has\u0142a. Zachowaj cierpliwo\u015b\u0107, ten proces mo\u017ce potrwa\u0107 kilka minut.
 Display_Random=Losowo
-Display_RecoverVerificationChoice=Wybierz jedn\u0105 z nast\u0119puj\u0105cych metod weryfikowania to\u017csamo\u015bci. Uwaga\: je\u015bli administrator wymaga wielu form weryfikacji, b\u0119dzie nast\u0119powa\u0142o przekierowanie z powrotem do tej strony, a\u017c zostan\u0105 spe\u0142nione wszystkie kryteria weryfikacji.
+Display_RecoverVerificationChoice=Wybierz jedn\u0105 z nast\u0119puj\u0105cych metod weryfikowania to\u017csamo\u015bci. Uwaga\: je\u015bli administrator wymaga kilku form weryfikacji, b\u0119dzie nast\u0119powa\u0142o przekierowanie z powrotem do tej strony, a\u017c zostan\u0105 spe\u0142nione wszystkie kryteria weryfikacji.
 Display_RecoverTokenSendChoices=W celu zweryfikowania Twojej to\u017csamo\u015bci zostanie do Ciebie wys\u0142any kod zabezpiecze\u0144. Wybierz preferowan\u0105 metod\u0119 otrzymania kodu zabezpiecze\u0144.
 Display_RecoverTokenSendChoiceEmail=Wy\u015blij kod na zarejestrowane adresy e-mail.
 Display_RecoverTokenSendChoiceSMS=Wy\u015blij kod na telefon kom\u00f3rkowy przy u\u017cyciu wiadomo\u015bci tekstowej (SMS).
@@ -170,7 +170,7 @@ Display_TokenDestination=Miejsce docelowe tokenu
 Display_TokenResend=Tw\u00f3j kod zabezpiecze\u0144 powinien zosta\u0107 dostarczony od razu. Je\u015bli czekasz od d\u0142u\u017cszego czasu i kod jeszcze nie nadszed\u0142, kliknij przycisk Ponownie wy\u015blij kod, aby otrzyma\u0107 nowy kod.
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
-Display_WarnExistingOtpSecretTime=Urz\u0105dzenie zosta\u0142o ju\u017c zarejestrowane dnia <span class\="timestamp">%1%</span>. Mo\u017cesz przetestowa\u0107 bie\u017c\u0105ce urz\u0105dzenie, wpisuj\u0105c poni\u017cej wygenerowany kod. W przypadku kontynuowania mo\u017cesz skonfigurowa\u0107 ponownie bie\u017c\u0105ce urz\u0105dzenie.
+Display_WarnExistingOtpSecretTime=Urz\u0105dzenie zosta\u0142o ju\u017c zarejestrowane dnia <span class="timestamp">%1%</span>. Mo\u017cesz przetestowa\u0107 bie\u017c\u0105ce urz\u0105dzenie, wpisuj\u0105c poni\u017cej wygenerowany kod. W przypadku kontynuowania mo\u017cesz skonfigurowa\u0107 ponownie bie\u017c\u0105ce urz\u0105dzenie.
 Display_WarnExistingOtpSecret=Urz\u0105dzenie zosta\u0142o ju\u017c zarejestrowane. Mo\u017cesz przetestowa\u0107 bie\u017c\u0105ce urz\u0105dzenie, wpisuj\u0105c poni\u017cej wygenerowany kod. W przypadku kontynuowania mo\u017cesz skonfigurowa\u0107 ponownie bie\u017c\u0105ce urz\u0105dzenie.
 Display_WarnExistingResponseTime=Odpowiedzi polecenia odzew/odpowied\u017a zosta\u0142y ju\u017c skonfigurowane dnia <span class\="timestamp">%1%</span>. W przypadku kontynuowania mo\u017cesz odpowiedzie\u0107 ponownie na pytania.
 Display_WarnExistingResponse=Odpowiedzi polecenia odzew/odpowied\u017a zosta\u0142y ju\u017c skonfigurowane. W przypadku kontynuowania mo\u017cesz odpowiedzie\u0107 ponownie na pytania.
