--- a/src/main/resources/password/pwm/i18n/Display_pt_BR.properties
+++ b/src/main/resources/password/pwm/i18n/Display_pt_BR.properties
@@ -1,4 +1,3 @@
-#Tue, 20 Jun 2017 12:52:39 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -78,6 +77,7 @@ Display_ChangePasswordForm=Insira os dados a seguir. Isso \u00e9 necess\u00e1rio
 Display_CheckingData=Verificando Dados...
 Display_CheckingPassword=Verificando Senha...
 Display_CheckingResponses=Verificando Respostas...
+Display_ClientDisconnect=N\u00e3o \u00e9 poss\u00edvel comunicar-se com o servidor.
 Display_CommunicationError=N\u00e3o \u00e9 poss\u00edvel comunicar-se com o servidor. Continue quando estiver pronto.
 Display_ConfirmResponses=Certifique-se de que as respostas e as perguntas estejam corretas. Verifique a ortografia e a pontua\u00e7\u00e3o. Se esquecer a senha, voc\u00ea poder\u00e1 acessar a conta respondendo \u00e0s perguntas de seguran\u00e7a.
 Display_Day=dia
@@ -132,7 +132,7 @@ Display_PleaseWait=Carregando...
 Display_PleaseWaitNewUser=Sua nova conta est\u00e1 sendo configurada. Esse processo pode levar v\u00e1rios minutos, seja paciente.
 Display_PleaseWaitPassword=A senha est\u00e1 sendo mudada. Esse processo pode levar v\u00e1rios minutos, seja paciente.
 Display_Random=Aleat\u00f3rio
-Display_RecoverVerificationChoice=Selecione um dos m\u00e9todos a seguir para verificar sua identidade. Nota\: Se o seu administrador requerer v\u00e1rias formas de verifica\u00e7\u00e3o, voc\u00ea ser\u00e1 redirecionado de volta para esta p\u00e1gina at\u00e9 que todos os crit\u00e9rios de verifica\u00e7\u00e3o sejam atendidos.
+Display_RecoverVerificationChoice=Selecione um dos m\u00e9todos de verifica\u00e7\u00e3o de identidade a seguir. Observa\u00e7\u00e3o\: Se o administrador exigir diversas formas de verifica\u00e7\u00e3o, voc\u00ea ser\u00e1 redirecionado de volta para esta p\u00e1gina at\u00e9 que todos os crit\u00e9rios de verifica\u00e7\u00e3o sejam atendidos.
 Display_RecoverTokenSendChoices=Voc\u00ea receber\u00e1 um c\u00f3digo de seguran\u00e7a para que possa confirmar sua identidade. Escolha o m\u00e9todo pelo qual gostaria de receber seu c\u00f3digo de seguran\u00e7a.
 Display_RecoverTokenSendChoiceEmail=Enviar o c\u00f3digo para seu endere\u00e7o de e-mail registrado.
 Display_RecoverTokenSendChoiceSMS=Enviar o c\u00f3digo para seu telefone celular usando mensagem de texto (SMS).
@@ -150,9 +150,9 @@ Display_ResponsesPrompt=Digite suas respostas de seguran\u00e7a
 Display_SelectionIndicator=Selecione um item de pergunta na lista
 Display_SearchCompleted=Pesquisa conclu\u00edda.
 Display_SearchResultsInfo=Retornou %1% resultados em %2%.
-Display_SearchResultsExceeded=Os resultados da pesquisa excedem o tamanho m\u00e1ximo da pesquisa.
+Display_SearchResultsExceeded=Os resultados ultrapassam o tamanho m\u00e1ximo de pesquisa
 Display_SetRandomPasswordPrompt=Definir uma nova senha aleat\u00f3ria para este usu\u00e1rio?
-Display_SearchResultsNone=Nenhum resultado.
+Display_SearchResultsNone=Nenhum resultado
 Display_Second=segundo
 Display_Seconds=segundos
 Display_SetupHelpdeskResponses=<p>O administrador precisa que voc\u00ea forne\u00e7a as respostas a seguir. Essas respostas s\u00e3o usadas para verificar sua identidade caso voc\u00ea contate o suporte t\u00e9cnico para assist\u00eancia.</p>
@@ -170,7 +170,7 @@ Display_TokenDestination=Destino do Token
 Display_TokenResend=Seu c\u00f3digo de seguran\u00e7a deve chegar imediatamente. Se tiver aguardado por um longo tempo e ainda n\u00e3o tiver recebido um c\u00f3digo, clique no bot\u00e3o de reenviar c\u00f3digo para receber um novo c\u00f3digo.
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
-Display_WarnExistingOtpSecretTime=Voc\u00ea j\u00e1 registrou seu dispositivo em <span class\="timestamp">%1%</span>. \u00c9 poss\u00edvel testar o dispositivo atual digitando o c\u00f3digo gerado abaixo. Se continuar, voc\u00ea poder\u00e1 reconfigurar o dispositivo atual.
+Display_WarnExistingOtpSecretTime=Voc\u00ea j\u00e1 registrou seu dispositivo em <span class="timestamp">%1%</span>. \u00c9 poss\u00edvel testar o dispositivo atual digitando o c\u00f3digo gerado abaixo. Se voc\u00ea continuar, poder\u00e1 reconfigurar o dispositivo atual.
 Display_WarnExistingOtpSecret=Voc\u00ea j\u00e1 inscreveu seu dispositivo.  \u00c9 poss\u00edvel testar o dispositivo atual digitando o c\u00f3digo gerado abaixo. Se continuar, ser\u00e1 poss\u00edvel reconfigurar o dispositivo atual.
 Display_WarnExistingResponseTime=Voc\u00ea j\u00e1 configurou as respostas para a pergunta/resposta de verifica\u00e7\u00e3o em <span class\="timestamp">%1%</span>. Se continuar, voc\u00ea poder\u00e1 responder \u00e0s perguntas novamente.
 Display_WarnExistingResponse=Voc\u00ea j\u00e1 configurou as respostas para a pergunta/resposta de verifica\u00e7\u00e3o. Se continuar, ser\u00e1 poss\u00edvel responder \u00e0s perguntas novamente.
@@ -320,7 +320,7 @@ Title_DeleteAccount=Apagar Minha Conta
 Title_Management=Gerenciamento
 Title_DirectReports=Reporta-se a
 Title_Organization=Organiza\u00e7\u00e3o
-Tooltip_PasswordStrength=O medidor de for\u00e7a da senha mostra o quanto \u00e9 f\u00e1cil adivinhar sua senha. Tente o seguinte para tornar sua senha mais forte\:<ul><li>Torne a senha mais longa</li><li>N\u00e3o repita letras nem n\u00fameros</li><li>Use letras mai\u00fasculas e min\u00fasculas</li><li>Adicione mais n\u00fameros</li><li>Adicione mais caracteres de s\u00edmbolo</li></ul>
+Tooltip_PasswordStrength=O medidor de n\u00edvel de seguran\u00e7a da senha mostra se \u00e9 f\u00e1cil adivinhar sua senha. Fa\u00e7a o seguinte para tornar sua senha mais segura\:<ul><li>Crie uma senha mais extensa</li><li>N\u00e3o repita letras ou n\u00fameros</li><li>Misture caracteres mai\u00fasculos e min\u00fasculos</li><li>Adicione mais n\u00fameros</li><li>Adicione mais s\u00edmbolos</li></ul>
 Confirm_DeleteUser=Tem certeza de que deseja continuar? Se continuar, o usu\u00e1rio selecionado ser\u00e1 apagado permanentemente. Isso n\u00e3o pode ser desfeito.
 Confirm=Tem certeza de que deseja continuar?
 Value_False=Falso
