--- a/src/main/resources/password/pwm/i18n/Display_zh_TW.properties
+++ b/src/main/resources/password/pwm/i18n/Display_zh_TW.properties
@@ -1,4 +1,3 @@
-#Tue, 20 Jun 2017 12:52:39 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -78,6 +77,7 @@ Display_ChangePasswordForm=\u8acb\u8f38\u5165\u4e0b\u5217\u8cc7\u6599\u3002\u7cf
 Display_CheckingData=\u6b63\u5728\u6aa2\u67e5\u8cc7\u6599...
 Display_CheckingPassword=\u6b63\u5728\u6aa2\u67e5\u5bc6\u78bc...
 Display_CheckingResponses=\u6b63\u5728\u6aa2\u67e5\u7b54\u6848...
+Display_ClientDisconnect=\u7121\u6cd5\u8207\u4f3a\u670d\u5668\u901a\u8a0a\u3002
 Display_CommunicationError=\u7121\u6cd5\u8207\u4f3a\u670d\u5668\u901a\u8a0a\u3002\u6e96\u5099\u5c31\u7dd2\u6642\u5373\u53ef\u7e7c\u7e8c\u3002
 Display_ConfirmResponses=\u8acb\u78ba\u5b9a\u60a8\u7684\u7b54\u6848\u548c\u554f\u984c\u662f\u5426\u6b63\u78ba\u3002\u8acb\u6aa2\u67e5\u62fc\u5b57\u548c\u6a19\u9ede\u7b26\u865f\u3002\u5982\u679c\u5fd8\u8a18\u5bc6\u78bc\uff0c\u60a8\u5fc5\u9808\u63d0\u4f9b\u9019\u4e9b\u5b89\u5168\u6027\u554f\u984c\u7684\u7b54\u6848\u624d\u80fd\u5b58\u53d6\u5e33\u6236\u3002
 Display_Day=\u5929
@@ -132,7 +132,7 @@ Display_PleaseWait=\u6b63\u5728\u8f09\u5165...
 Display_PleaseWaitNewUser=\u6b63\u5728\u8a2d\u5b9a\u60a8\u7684\u65b0\u5e33\u6236\u3002\u6b64\u7a0b\u5e8f\u53ef\u80fd\u9700\u8981\u6578\u5206\u9418\u7684\u6642\u9593\uff0c\u8acb\u8010\u5fc3\u7b49\u5019\u3002
 Display_PleaseWaitPassword=\u6b63\u5728\u8b8a\u66f4\u60a8\u7684\u5bc6\u78bc\u3002\u6b64\u7a0b\u5e8f\u53ef\u80fd\u9700\u8981\u6578\u5206\u9418\u7684\u6642\u9593\uff0c\u8acb\u8010\u5fc3\u7b49\u5019\u3002
 Display_Random=\u96a8\u6a5f
-Display_RecoverVerificationChoice=\u8acb\u9078\u53d6\u4e0b\u5217\u65b9\u6cd5\u5176\u4e2d\u4e4b\u4e00\u4f86\u9a57\u8b49\u60a8\u7684\u8eab\u5206\u3002\u6ce8\u610f\uff1a\u5982\u679c\u60a8\u7684\u7ba1\u7406\u54e1\u8981\u6c42\u591a\u7d44\u5f62\u5f0f\u7684\u9a57\u8b49\uff0c\u60a8\u5c07\u6703\u91cd\u65b0\u5c0e\u5411\u81f3\u6b64\u9801\uff0c\u76f4\u5230\u9054\u5230\u6240\u6709\u9a57\u8b49\u6e96\u5247\u3002
+Display_RecoverVerificationChoice=\u8acb\u9078\u53d6\u4e0b\u5217\u65b9\u6cd5\u5176\u4e2d\u4e00\u9805\u4f86\u9a57\u8b49\u60a8\u7684\u8eab\u5206\u3002\u6ce8\u610f\uff1a\u82e5\u60a8\u7684\u7ba1\u7406\u54e1\u9700\u8981\u591a\u9805\u9a57\u8b49\u8868\u55ae\uff0c\u7cfb\u7d71\u6703\u5c07\u60a8\u91cd\u65b0\u5c0e\u5411\u81f3\u6b64\u9801\u9762\uff0c\u76f4\u5230\u9054\u5230\u6240\u6709\u9a57\u8b49\u6e96\u5247\u3002
 Display_RecoverTokenSendChoices=\u70ba\u9a57\u8b49\u60a8\u7684\u8eab\u5206\uff0c\u6211\u5011\u5c07\u50b3\u9001\u5b89\u5168\u6027\u4ee3\u78bc\u7d66\u60a8\u3002\u8acb\u9078\u64c7\u60a8\u60f3\u7528\u4f86\u63a5\u6536\u5b89\u5168\u6027\u4ee3\u78bc\u7684\u65b9\u5f0f\u3002
 Display_RecoverTokenSendChoiceEmail=\u50b3\u9001\u4ee3\u78bc\u81f3\u60a8\u8a3b\u518a\u7684\u96fb\u5b50\u90f5\u4ef6\u5730\u5740\u3002
 Display_RecoverTokenSendChoiceSMS=\u4f7f\u7528\u7c21\u8a0a (SMS) \u50b3\u9001\u4ee3\u78bc\u81f3\u60a8\u7684\u624b\u6a5f\u3002
@@ -150,9 +150,9 @@ Display_ResponsesPrompt=\u8acb\u8f38\u5165\u60a8\u7684\u5b89\u5168\u6027\u7b54\u
 Display_SelectionIndicator=\u8acb\u9078\u53d6\u6e05\u55ae\u4e2d\u7684\u554f\u984c\u9805\u76ee
 Display_SearchCompleted=\u5df2\u5b8c\u6210\u641c\u5c0b\u3002
 Display_SearchResultsInfo=\u5df2\u50b3\u56de\u5728 %2% \u4e2d\u7684 %1% \u500b\u7d50\u679c\u3002
-Display_SearchResultsExceeded=\u641c\u5c0b\u7d50\u679c\u8d85\u904e\u641c\u5c0b\u5927\u5c0f\u4e0a\u9650\u3002
+Display_SearchResultsExceeded=\u641c\u5c0b\u7d50\u679c\u8d85\u904e\u6700\u5927\u641c\u5c0b\u5c3a\u5bf8
 Display_SetRandomPasswordPrompt=\u8981\u70ba\u6b64\u4f7f\u7528\u8005\u8a2d\u5b9a\u65b0\u7684\u96a8\u6a5f\u5bc6\u78bc\u55ce\uff1f
-Display_SearchResultsNone=\u6c92\u6709\u7d50\u679c\u3002
+Display_SearchResultsNone=\u6c92\u6709\u7d50\u679c
 Display_Second=\u79d2
 Display_Seconds=\u79d2
 Display_SetupHelpdeskResponses=<p>\u60a8\u7684\u7ba1\u7406\u54e1\u8981\u6c42\u60a8\u63d0\u4f9b\u4e0b\u5217\u7b54\u6848\u3002\u60a8\u806f\u7d61\u670d\u52d9\u53f0\u4ee5\u5c0b\u6c42\u5354\u52a9\u6642\uff0c\u7cfb\u7d71\u53ef\u4ee5\u4f7f\u7528\u9019\u4e9b\u7b54\u6848\u9a57\u8b49\u60a8\u7684\u8eab\u5206\u3002</p>
@@ -170,7 +170,7 @@ Display_TokenDestination=\u8a18\u865f\u76ee\u7684\u5730
 Display_TokenResend=\u60a8\u7684\u5b89\u5168\u4ee3\u78bc\u5c07\u7acb\u523b\u62b5\u9054\u3002\u82e5\u60a8\u5df2\u7b49\u5019\u591a\u6642\u4e14\u5c1a\u672a\u6536\u5230\u4ee3\u78bc\uff0c\u8acb\u6309\u4e00\u4e0b\u91cd\u65b0\u50b3\u9001\u4ee3\u78bc\u6309\u9215\u4ee5\u63a5\u6536\u65b0\u7684\u4ee3\u78bc\u3002
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
-Display_WarnExistingOtpSecretTime=\u60a8\u5df2\u65bc <span class\="timestamp">%1%</span> \u8a3b\u518a\u88dd\u7f6e\u3002\u60a8\u53ef\u4ee5\u5728\u4e0b\u65b9\u8f38\u5165\u7522\u751f\u7684\u4ee3\u78bc\uff0c\u4ee5\u6e2c\u8a66\u76ee\u524d\u7684\u88dd\u7f6e\u3002\u5982\u679c\u60a8\u7e7c\u7e8c\u9032\u884c\uff0c\u5247\u53ef\u4ee5\u91cd\u65b0\u8a2d\u5b9a\u76ee\u524d\u7684\u88dd\u7f6e\u3002
+Display_WarnExistingOtpSecretTime=\u60a8\u5df2\u7d93\u5728 <span class="timestamp">%1%</span> \u4e0a\u8a3b\u518a\u60a8\u7684\u88dd\u7f6e\u3002\u60a8\u53ef\u4ee5\u900f\u904e\u5728\u7522\u751f\u7684\u4ee3\u78bc\u4e0b\u65b9\u8f38\u5165\u4f86\u6e2c\u8a66\u60a8\u76ee\u524d\u7684\u88dd\u7f6e\u3002\u82e5\u60a8\u7e7c\u7e8c\uff0c\u60a8\u53ef\u4ee5\u91cd\u65b0\u8a2d\u5b9a\u60a8\u76ee\u524d\u7684\u88dd\u7f6e\u3002
 Display_WarnExistingOtpSecret=\u60a8\u5df2\u8a3b\u518a\u88dd\u7f6e\u3002\u60a8\u53ef\u4ee5\u5728\u4e0b\u65b9\u8f38\u5165\u7522\u751f\u7684\u4ee3\u78bc\uff0c\u4ee5\u6e2c\u8a66\u76ee\u524d\u7684\u88dd\u7f6e\u3002\u5982\u679c\u60a8\u7e7c\u7e8c\u9032\u884c\uff0c\u5247\u53ef\u4ee5\u91cd\u65b0\u8a2d\u5b9a\u76ee\u524d\u7684\u88dd\u7f6e\u3002
 Display_WarnExistingResponseTime=\u60a8\u5df2\u65bc <span class\="timestamp">%1%</span> \u8a2d\u5b9a\u8655\u7406\u5b89\u5168/\u56de\u61c9\u7b54\u6848\u3002\u5982\u679c\u60a8\u7e7c\u7e8c\u9032\u884c\uff0c\u5247\u53ef\u4ee5\u91cd\u65b0\u56de\u7b54\u554f\u984c\u3002
 Display_WarnExistingResponse=\u60a8\u5df2\u8a2d\u5b9a\u8655\u7406\u5b89\u5168/\u56de\u61c9\u7b54\u6848\u3002\u5982\u679c\u60a8\u7e7c\u7e8c\u9032\u884c\uff0c\u5247\u53ef\u4ee5\u91cd\u65b0\u56de\u7b54\u554f\u984c\u3002
@@ -320,7 +320,7 @@ Title_DeleteAccount=\u522a\u9664\u6211\u7684\u5e33\u6236
 Title_Management=\u7ba1\u7406
 Title_DirectReports=\u76f4\u5c6c\u4e0b\u5c6c
 Title_Organization=\u7d44\u7e54
-Tooltip_PasswordStrength=\u5bc6\u78bc\u5f37\u5ea6\u8a08\u91cf\u6703\u986f\u793a\u731c\u6e2c\u60a8\u5bc6\u78bc\u7684\u96e3\u6613\u5ea6\u3002\u5617\u8a66\u4e0b\u5217\u65b9\u6cd5\u4ee5\u63d0\u9ad8\u60a8\u7684\u5bc6\u78bc\u6548\u529b\uff1a<ul><li>\u52a0\u9577\u5bc6\u78bc</li><li>\u8acb\u52ff\u4f7f\u7528\u91cd\u8907\u7684\u5b57\u6bcd\u6216\u6578\u5b57</li><li>\u4f7f\u7528\u6df7\u5408 (\u5927\u5beb\u548c\u5c0f\u5beb) \u5b57\u6bcd</li><li>\u52a0\u5165\u66f4\u591a\u6578\u5b57</li><li>\u52a0\u5165\u66f4\u591a\u7b26\u865f\u5b57\u5143</li></ul>
+Tooltip_PasswordStrength=\u5bc6\u78bc\u5f37\u5ea6\u8868\u986f\u793a\u8981\u731c\u6e2c\u60a8\u7684\u5bc6\u78bc\u662f\u591a\u7c21\u55ae\u7684\u4e8b\u3002\u5617\u8a66\u4ee5\u4e0b\u65b9\u6cd5\u4f86\u589e\u52a0\u60a8\u7684\u5bc6\u78bc\u5f37\u5ea6\uff1a<ul><li>\u5c07\u5bc6\u78bc\u52a0\u9577</li><li>\u8acb\u52ff\u91cd\u8907\u5b57\u6bcd\u6216\u6578\u5b57</li><li>\u4f7f\u7528\u6df7\u5408 (\u5927\u5c0f\u548c\u5c0f\u5beb) \u5b57\u6bcd</li><li>\u65b0\u589e\u66f4\u591a\u6578\u5b57</li><li>\u65b0\u589e\u66f4\u591a\u7b26\u865f\u5b57\u5143</li></ul>
 Confirm_DeleteUser=\u60a8\u78ba\u5b9a\u8981\u7e7c\u7e8c\u55ce\uff1f\u5982\u679c\u60a8\u7e7c\u7e8c\u9032\u884c\uff0c\u7cfb\u7d71\u4fbf\u6703\u6c38\u4e45\u522a\u9664\u9078\u53d6\u7684\u4f7f\u7528\u8005\u3002\u6b64\u52d5\u4f5c\u7121\u6cd5\u5fa9\u539f\u3002
 Confirm=\u60a8\u662f\u5426\u8981\u7e7c\u7e8c\uff1f
 Value_False=\u5047
