--- a/src/main/resources/password/pwm/i18n/Message_ca.properties
+++ b/src/main/resources/password/pwm/i18n/Message_ca.properties
@@ -162,7 +162,7 @@ Success_ChangedHelpdeskPassword=La contrasenya de l'usuari s'ha canviat correcta
 Success_PasswordReset=La contrasenya de %1% s'ha definit correctament.
 Success_PasswordSend=La contrasenya nova s'ha enviat a %1%.  Tanqui la finestra i inici\u00ef la sessi\u00f3 amb la contrasenya nova.
 Success_ResponsesMeetRules=Les respostes compleixen els requisits. Cliqui Desa les respostes quan estigui preparat.
-Success_SetupResponse=Gr\u00e0cies. Les preguntes i les respostes secretes s'han desat correctament. Si alguna vegada oblida la contrasenya, pot utilitzar les respostes a aquestes preguntes per restablir la contrasenya.
+Success_SetupResponse=Gr\u00e0cies. Les preguntes i les respostes secretes s'han desat correctament. Si alguna vegada oblida la contrasenya, pot utilitzar les respostes a aquestes preguntes per restablir-la.
 Success_Unknown=L'operaci\u00f3 ha finalitzat correctament.
 Success_UnlockAccount=El compte s'ha desbloquejat.
 Success_UpdateGuest=El compte de convidat s'ha actualitzat correctament. L'usuari convidat rebr\u00e0 una notificaci\u00f3 sempre que s'hagi introdu\u00eft un correu electr\u00f2nic.
@@ -170,4 +170,4 @@ Success_UpdateProfile=La informaci\u00f3 d'usuari s'ha actualitzat correctament.
 Success_UpdateForm=Tot est\u00e0 llest per actualitzar el perfil. Continu\u00ef quan estigui preparat.
 Success_Action=L'acci\u00f3 %1% ha finalitzat correctament.
 Success_OtpSetup=La inscripci\u00f3 del dispositiu ha finalitzat correctament.
-Success_TokenResend=Us hem enviat un codi de seguretat nou.
+Success_TokenResend=Li hem enviat un codi de seguretat nou.
